Ticket #28482: Updated generated I18N.

--- a/com.top_logic.bpe.modeler/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe.modeler/src/main/java/META-INF/messages_de.properties
@@ -1,5 +1,5 @@
 com.top_logic.bpe.modeler.component.ApplyBPMNStructuralChanges = BPMN-Strukturänderungen anwenden
-com.top_logic.bpe.modeler.component.ApplyBPMNStructuralChanges.tooltip = <i>Befehlshandler</i>, der die aktuellen Änderungen in einem <i>BPML-Editor</i> speichert.
+com.top_logic.bpe.modeler.component.ApplyBPMNStructuralChanges.tooltip = <i>Befehl</i> zum Speichern der aktuellen Änderungen in einem <i>BPML-Editor</i>.
 com.top_logic.bpe.modeler.component.BPMLEditor = BPML-Editor
 com.top_logic.bpe.modeler.component.BPMLEditor.tooltip = <i>Komponente</i> zur Bearbeitung eines BPMN-Diagramms.
 com.top_logic.bpe.modeler.component.state.StateBasedHandler = Zustandsbasierter Handler
@@ -11,9 +11,9 @@ com.top_logic.bpe.modeler.component.state.StateBasedHandler.Config.stateAttribut
 com.top_logic.bpe.modeler.component.state.StateBasedHandler.Config.stateAttribute.tooltip = Name des Zustandsattributs in <i>Modelltyp</i>. <p> Es wird erwartet, dass das Zustandsattribut vom <i>Aufzählungstyp</i> ist. </p>
 com.top_logic.bpe.modeler.component.state.StateBasedHandler.Config.toState = Um anzugeben
 com.top_logic.bpe.modeler.component.state.StateBasedHandler.Config.toState.tooltip = Name des Zielzustandsklassifikators, den dieser Handler in das <i>Attribut State</i> setzt.
-com.top_logic.bpe.modeler.component.state.StateBasedHandler.tooltip = <i>Befehlshandler</i>, der Zustandsattribute von Modellen auf der Grundlage der Konfiguration aktualisiert.
+com.top_logic.bpe.modeler.component.state.StateBasedHandler.tooltip = <i>Befehl</i> zur Aktualisierung der Statusattribute von Modellen auf der Grundlage der Konfiguration.
 com.top_logic.bpe.modeler.copy.BPMLCopyCommand = BPML-Kopierbefehl
-com.top_logic.bpe.modeler.copy.BPMLCopyCommand.tooltip = <i>Befehlshandler, der</i> einen Workflow kopiert.
+com.top_logic.bpe.modeler.copy.BPMLCopyCommand.tooltip = <i>Befehl</i> zum Kopieren eines Workflows.
 com.top_logic.bpe.modeler.copy.CopyFormBuilder = Formular-Ersteller kopieren
 com.top_logic.bpe.modeler.copy.CopyFormBuilder$Form = Formular
 com.top_logic.bpe.modeler.copy.CopyFormBuilder$Form.tooltip = Formulartyp mit einem einzigen neuen Namensfeld.
@@ -21,7 +21,7 @@ com.top_logic.bpe.modeler.copy.CopyFormBuilder.Form.new-name = Neuer Name
 com.top_logic.bpe.modeler.copy.CopyFormBuilder.Form.new-name.tooltip = Der Name der neuen Version.
 com.top_logic.bpe.modeler.copy.CopyFormBuilder.tooltip = <i>Hersteller von Deklarations-Formularen, der</i> ein <i>Formular</i> ausfüllt.
 com.top_logic.bpe.modeler.create.NewBPMLCommand = Neuer BPML-Befehl
-com.top_logic.bpe.modeler.create.NewBPMLCommand.tooltip = <i>Befehlshandler</i>, der ein neues leeres BPMN-Diagramm erstellt.
+com.top_logic.bpe.modeler.create.NewBPMLCommand.tooltip = <i>Befehl</i> zum Erstellen eines neuen leeren BPMN-Diagramms.
 com.top_logic.bpe.modeler.create.NewForm = Neue Form
 com.top_logic.bpe.modeler.create.NewForm.icon = Symbol
 com.top_logic.bpe.modeler.create.NewForm.icon.tooltip = Das Symbol, das für diesen Workflow zu verwenden ist.
@@ -33,9 +33,9 @@ com.top_logic.bpe.modeler.export.ExportBPMLDefinition.tooltip = Befehl zum Expor
 com.top_logic.bpe.modeler.upload.BPMLUpdateCommand = BPML-Aktualisierungsbefehl
 com.top_logic.bpe.modeler.upload.BPMLUpdateCommand.Config.model = Modell
 com.top_logic.bpe.modeler.upload.BPMLUpdateCommand.Config.model.tooltip = Das zu aktualisierende Modell.
-com.top_logic.bpe.modeler.upload.BPMLUpdateCommand.tooltip = <i>Befehlshandler</i>, der eine BPML-Datei importiert.
+com.top_logic.bpe.modeler.upload.BPMLUpdateCommand.tooltip = <i>Befehl</i> zum Importieren einer BPML-Datei.
 com.top_logic.bpe.modeler.upload.BPMLUploadCommand = BPML-Upload-Befehl
-com.top_logic.bpe.modeler.upload.BPMLUploadCommand.tooltip = <i>Befehlshandler</i>, der eine BPML-Datei importiert.
+com.top_logic.bpe.modeler.upload.BPMLUploadCommand.tooltip = <i>Befehl</i> zum Importieren einer BPML-Datei.
 com.top_logic.bpe.modeler.upload.UpdateForm = Formular aktualisieren
 com.top_logic.bpe.modeler.upload.UpdateForm.tooltip = <i>Upload-Formular</i> zum Aktualisieren eines vorhandenen BPML-Diagramms.
 com.top_logic.bpe.modeler.upload.UpdateForm.update-bpml-extensions = bpml-Erweiterungen aktualisieren
