--- a/com.top_logic.bpe.modeler/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe.modeler/src/main/java/META-INF/messages_en.properties
@@ -1,5 +1,5 @@
 com.top_logic.bpe.modeler.component.ApplyBPMNStructuralChanges = Apply BPMN structural changes
-com.top_logic.bpe.modeler.component.ApplyBPMNStructuralChanges.tooltip = <i>Command handler</i> saving the current changes in an <i>BPML editor</i>.
+com.top_logic.bpe.modeler.component.ApplyBPMNStructuralChanges.tooltip = <i>Command</i> saving the current changes in an <i>BPML editor</i>.
 com.top_logic.bpe.modeler.component.BPMLEditor = BPML editor
 com.top_logic.bpe.modeler.component.BPMLEditor.tooltip = <i>Component</i> allowing to edit a BPMN diagram.
 com.top_logic.bpe.modeler.component.state.StateBasedHandler = State based handler
@@ -11,9 +11,9 @@ com.top_logic.bpe.modeler.component.state.StateBasedHandler.Config.stateAttribut
 com.top_logic.bpe.modeler.component.state.StateBasedHandler.Config.stateAttribute.tooltip = Name of the state attribute in <i>Model type</i>. <p> The state attribute is expected to be of <i>classification</i> type. </p>
 com.top_logic.bpe.modeler.component.state.StateBasedHandler.Config.toState = To state
 com.top_logic.bpe.modeler.component.state.StateBasedHandler.Config.toState.tooltip = Name of the target state classifier that this handler sets into the <i>State attribute</i>.
-com.top_logic.bpe.modeler.component.state.StateBasedHandler.tooltip = <i>Command handler</i> that updates state attributes on models based on configuration.
+com.top_logic.bpe.modeler.component.state.StateBasedHandler.tooltip = <i>Command</i> that updates state attributes on models based on configuration.
 com.top_logic.bpe.modeler.copy.BPMLCopyCommand = BPML copy command
-com.top_logic.bpe.modeler.copy.BPMLCopyCommand.tooltip = <i>Command handler</i> copying a workflow.
+com.top_logic.bpe.modeler.copy.BPMLCopyCommand.tooltip = <i>Command</i> copying a workflow.
 com.top_logic.bpe.modeler.copy.CopyFormBuilder = Copy form builder
 com.top_logic.bpe.modeler.copy.CopyFormBuilder$Form = Form
 com.top_logic.bpe.modeler.copy.CopyFormBuilder$Form.tooltip = Form type with a single new name field.
@@ -21,7 +21,7 @@ com.top_logic.bpe.modeler.copy.CopyFormBuilder.Form.new-name = New name
 com.top_logic.bpe.modeler.copy.CopyFormBuilder.Form.new-name.tooltip = The name of the new version.
 com.top_logic.bpe.modeler.copy.CopyFormBuilder.tooltip = <i>Declarative form builder</i> filling a <i>form</i>.
 com.top_logic.bpe.modeler.create.NewBPMLCommand = New BPML command
-com.top_logic.bpe.modeler.create.NewBPMLCommand.tooltip = <i>Command handler</i> creating a new empty BPMN diagram.
+com.top_logic.bpe.modeler.create.NewBPMLCommand.tooltip = <i>Command</i> creating a new empty BPMN diagram.
 com.top_logic.bpe.modeler.create.NewForm = New form
 com.top_logic.bpe.modeler.create.NewForm.icon = Icon
 com.top_logic.bpe.modeler.create.NewForm.icon.tooltip = The icon to use for this workflow.
@@ -33,9 +33,9 @@ com.top_logic.bpe.modeler.export.ExportBPMLDefinition.tooltip = Command exportin
 com.top_logic.bpe.modeler.upload.BPMLUpdateCommand = BPML update command
 com.top_logic.bpe.modeler.upload.BPMLUpdateCommand.Config.model = Model
 com.top_logic.bpe.modeler.upload.BPMLUpdateCommand.Config.model.tooltip = The model to update.
-com.top_logic.bpe.modeler.upload.BPMLUpdateCommand.tooltip = <i>Command handler</i> importing a BPML file.
+com.top_logic.bpe.modeler.upload.BPMLUpdateCommand.tooltip = <i>Command</i> importing a BPML file.
 com.top_logic.bpe.modeler.upload.BPMLUploadCommand = BPML upload command
-com.top_logic.bpe.modeler.upload.BPMLUploadCommand.tooltip = <i>Command handler</i> importing a BPML file.
+com.top_logic.bpe.modeler.upload.BPMLUploadCommand.tooltip = <i>Command</i> importing a BPML file.
 com.top_logic.bpe.modeler.upload.UpdateForm = Update form
 com.top_logic.bpe.modeler.upload.UpdateForm.tooltip = <i>Upload form</i> used for update an existing BPML diagram.
 com.top_logic.bpe.modeler.upload.UpdateForm.update-bpml-extensions = Update bpml extensions
