--- a/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe/src/main/java/META-INF/messages_en.properties
@@ -147,11 +147,11 @@ com.top_logic.bpe.layout.execution.ProcessExecutionCreateComponent.UIOptions.sta
 com.top_logic.bpe.layout.execution.ProcessExecutionCreateComponent.UIOptions.startEvent.tooltip = Strategy of selecting the <i>start event</i> of the process to start.
 com.top_logic.bpe.layout.execution.ProcessExecutionCreateComponent.tooltip = <i>Default create object component</i> showing the configured attributes of the first task when starting a process.
 com.top_logic.bpe.layout.execution.command.FinishTaskCommand = Complete task
-com.top_logic.bpe.layout.execution.command.FinishTaskCommand.tooltip = <i>Command handler</i> that completes a task and advances the process to the next step(s). <p> A confirm-dialog is shown before switching to the next task. If a manual <i>gateway</i> follows the completed task, the user can explicitly choose the next step. </p>
+com.top_logic.bpe.layout.execution.command.FinishTaskCommand.tooltip = <i>Command</i> that completes a task and advances the process to the next step(s). <p> A confirm-dialog is shown before switching to the next task. If a manual <i>gateway</i> follows the completed task, the user can explicitly choose the next step. </p>
 com.top_logic.bpe.layout.execution.command.StartProcessExecutionHandler = Start process execution handler
 com.top_logic.bpe.layout.execution.command.StartProcessExecutionHandler.Config.initializer = Initializer
 com.top_logic.bpe.layout.execution.command.StartProcessExecutionHandler.Config.initializer.tooltip = Optional initialization of a newly created process execution.
-com.top_logic.bpe.layout.execution.command.StartProcessExecutionHandler.tooltip = <i>Command handler</i> to start a <i>process execution</i> and skip the first <i>task</i> if it has already been merged into start-gui (see <i>process execution create component</i>).
+com.top_logic.bpe.layout.execution.command.StartProcessExecutionHandler.tooltip = <i>Command</i> to start a <i>process execution</i> and skip the first <i>task</i> if it has already been merged into start-gui (see <i>process execution create component</i>).
 com.top_logic.bpe.layout.execution.init.ProcessInitializerByExpression = TL-Script process initialization
 com.top_logic.bpe.layout.execution.init.ProcessInitializerByExpression.Config.initializer = Initializer
 com.top_logic.bpe.layout.execution.init.ProcessInitializerByExpression.Config.initializer.tooltip = Action initializing a newly created process execution. <p> The function takes the process execution as first argument and the target model of the process start command as second argument. </p>
