--- a/com.top_logic.demo/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.demo/src/main/java/META-INF/messages_de.properties
@@ -122,7 +122,7 @@ com.top_logic.demo.layout.demo.export.SimpleFixedTablePPTExporter.Config.templat
 com.top_logic.demo.layout.demo.export.SimpleFixedTablePPTExporter.Config.template-file-name.tooltip = Name der für den Export verwendeten Vorlagendatei.
 com.top_logic.demo.layout.demo.export.SimpleFixedTablePPTExporter.tooltip = <i>Befehlshandler</i>, der nach PPT exportiert und eine "FIXEDTABLE" ersetzt, mit einfachem Inhalt.
 com.top_logic.demo.layout.demo.table.ClearSelectionCommand = Auswahlbefehl löschen
-com.top_logic.demo.layout.demo.table.ClearSelectionCommand.tooltip = <i>Befehlshandler</i>, der die Auswahl seiner auswählbaren Komponente löscht.
+com.top_logic.demo.layout.demo.table.ClearSelectionCommand.tooltip = <i>Befehl</i>, der die Auswahl der auswählbaren Komponente aufhebt.
 com.top_logic.demo.layout.demo.table.DemoFormulaTables = Demo-Formeltabellen
 com.top_logic.demo.layout.demo.table.DemoFormulaTables$FocusTableCommand = Befehl Fokus-Tabelle
 com.top_logic.demo.layout.demo.table.DemoFormulaTables$FocusTableCommand.tooltip = <i>Befehlshandler</i>, der eine konfigurierte Tabelle fokussiert hat.
@@ -131,10 +131,10 @@ com.top_logic.demo.layout.demo.table.DemoFormulaTables.FocusTableCommand.Config.
 com.top_logic.demo.layout.demo.table.DemoFormulaTables.tooltip = Die Klasse <i>Demo-Formeltabellen</i> ist die zugrundeliegende Komponente zur Darstellung von Tabellen in Formeln
 com.top_logic.demo.layout.demo.table.DemoMultipleTablesComponent = Demo-Komponente für mehrere Tabellen
 com.top_logic.demo.layout.demo.table.DemoMultipleTablesComponent$RebuildTable = Tabelle wiederherstellen
-com.top_logic.demo.layout.demo.table.DemoMultipleTablesComponent$RebuildTable.tooltip = <i>Kommando-Handler</i>, der ein Tabellenfeld fallen lässt und ein neues aufbaut.
+com.top_logic.demo.layout.demo.table.DemoMultipleTablesComponent$RebuildTable.tooltip = <i>Befehl</i> zum Löschen eines Tabellenfeldes und Erstellen eines neuen Feldes.
 com.top_logic.demo.layout.demo.table.DemoMultipleTablesComponent.tooltip = <i>Formularkomponente</i> mit zwei <i>Tabellenfeldern</i>, die mit einem <i>separaten Table-Control-Anbieter</i> angezeigt werden. <p> Regressionstestfall für Ticket #19916. </p>
 com.top_logic.demo.layout.demo.table.DemoRemoveRowCommand = Demo Befehl Zeile entfernen
-com.top_logic.demo.layout.demo.table.DemoRemoveRowCommand.tooltip = <i>Befehlshandler</i>, der die ausgewählte Zeile aus einer <i>Tabellenkomponente</i> entfernt.
+com.top_logic.demo.layout.demo.table.DemoRemoveRowCommand.tooltip = <i>Befehl</i>, der die ausgewählte Zeile aus einer <i>Tabellenkomponente</i> entfernt.
 com.top_logic.demo.layout.demo.tile.CustomDemoATile = Benutzerdefinierte Demo A-Kachel
 com.top_logic.demo.layout.demo.tile.CustomDemoATile.model-name = Name des Modells
 com.top_logic.demo.layout.demo.tile.CustomDemoATile.model-name.tooltip = Der <i>Modellname</i> des angezeigten Objekts.
@@ -375,7 +375,7 @@ com.top_logic.demo.layout.form.demo.TestControlsForm = Formular Testkontrollen
 com.top_logic.demo.layout.form.demo.TestControlsForm$ChangeValues = Werte ändern
 com.top_logic.demo.layout.form.demo.TestControlsForm$ChangeValues.tooltip = Aktion, die programmatisch Werte in allen Testfeldern ändert.
 com.top_logic.demo.layout.form.demo.TestControlsForm$CheckAll = Alle markieren
-com.top_logic.demo.layout.form.demo.TestControlsForm$CheckAll.tooltip = <i>Befehlshandler</i>, der jedes <i>Formularfeld</i> auf Fehler prüft.
+com.top_logic.demo.layout.form.demo.TestControlsForm$CheckAll.tooltip = Der <i>Befehl</i> prüft jedes <i>Formularfeld</i> auf Fehler.
 com.top_logic.demo.layout.form.demo.TestControlsForm$GotoPersonComponent = Komponente Gehe zu Person
 com.top_logic.demo.layout.form.demo.TestControlsForm$GotoPersonComponent.tooltip = Im Dialog angezeigte Komponente. Erstellt nur ein Befehlsfeld, um zum aktuellen Benutzer zu gehen.
 com.top_logic.demo.layout.form.demo.TestControlsForm$ResetValues = Werte zurücksetzen
@@ -454,7 +454,7 @@ com.top_logic.demo.model.struct.DemoVec.x.tooltip = Die X-Koordinate.
 com.top_logic.demo.model.struct.DemoVec.y = Y
 com.top_logic.demo.model.struct.DemoVec.y.tooltip = Die Y-Koordinate.
 com.top_logic.demo.model.types.util.CreateLGridChildHandler = L-Grid-Kinder-Handler erstellen
-com.top_logic.demo.model.types.util.CreateLGridChildHandler.tooltip = <i>Befehlshandler</i>, der <i>Demo-Knoten</i> vom <i>Typ</i> <i>A</i> mit <i>Demo-Knoten vom Typ L</i> erzeugt.
+com.top_logic.demo.model.types.util.CreateLGridChildHandler.tooltip = <i>Befehl</i>, der <i>Demo-Ebene A-Unterobjekte</i> von <i>Demo-Typen L-Knoten</i> erzeugt.
 com.top_logic.demo.model.types.util.CyclicDemoTreeBuilder = Zyklische Demo-Baumerstellung
 com.top_logic.demo.model.types.util.CyclicDemoTreeBuilder.tooltip = <i>Demo-Baumersteller</i>, der Objekte vom Typ <code>"A"</code> im Attribut <code>"list"</code> als Kinder behandelt.
 com.top_logic.demo.model.types.util.DeleteMailsCommand = Befehl zum Löschen von Mails
