--- a/com.top_logic.demo/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.demo/src/main/java/META-INF/messages_en.properties
@@ -122,7 +122,7 @@ com.top_logic.demo.layout.demo.export.SimpleFixedTablePPTExporter.Config.templat
 com.top_logic.demo.layout.demo.export.SimpleFixedTablePPTExporter.Config.template-file-name.tooltip = Name of the template file used to export.
 com.top_logic.demo.layout.demo.export.SimpleFixedTablePPTExporter.tooltip = <i>Command handler</i> exporting to PPT and replaces a "FIXEDTABLE", with simple content.
 com.top_logic.demo.layout.demo.table.ClearSelectionCommand = Clear selection command
-com.top_logic.demo.layout.demo.table.ClearSelectionCommand.tooltip = <i>Command handler</i> clearing the selection of it's selectable component.
+com.top_logic.demo.layout.demo.table.ClearSelectionCommand.tooltip = <i>Command</i> clearing the selection of it's selectable component.
 com.top_logic.demo.layout.demo.table.DemoFormulaTables = Demo formula tables
 com.top_logic.demo.layout.demo.table.DemoFormulaTables$FocusTableCommand = Focus table command
 com.top_logic.demo.layout.demo.table.DemoFormulaTables$FocusTableCommand.tooltip = <i>Command handler</i> that focused a configured table.
@@ -131,10 +131,10 @@ com.top_logic.demo.layout.demo.table.DemoFormulaTables.FocusTableCommand.Config.
 com.top_logic.demo.layout.demo.table.DemoFormulaTables.tooltip = The class <i>demo formula tables</i> is the underlying component to show tables in formulas
 com.top_logic.demo.layout.demo.table.DemoMultipleTablesComponent = Demo multiple tables component
 com.top_logic.demo.layout.demo.table.DemoMultipleTablesComponent$RebuildTable = Rebuild table
-com.top_logic.demo.layout.demo.table.DemoMultipleTablesComponent$RebuildTable.tooltip = <i>Command handler</i> dropping a table field and building a new one.
+com.top_logic.demo.layout.demo.table.DemoMultipleTablesComponent$RebuildTable.tooltip = <i>Command</i> dropping a table field and building a new one.
 com.top_logic.demo.layout.demo.table.DemoMultipleTablesComponent.tooltip = <i>Form component</i> with two <i>table field</i> displayed with <i>separate table control provider</i>. <p> Regression test case for Ticket #19916. </p>
 com.top_logic.demo.layout.demo.table.DemoRemoveRowCommand = Demo remove row command
-com.top_logic.demo.layout.demo.table.DemoRemoveRowCommand.tooltip = <i>Command handler</i> that removes the selected row from a <i>table component</i>.
+com.top_logic.demo.layout.demo.table.DemoRemoveRowCommand.tooltip = <i>Command</i> that removes the selected row from a <i>table component</i>.
 com.top_logic.demo.layout.demo.tile.CustomDemoATile = Custom demo A tile
 com.top_logic.demo.layout.demo.tile.CustomDemoATile.model-name = Model name
 com.top_logic.demo.layout.demo.tile.CustomDemoATile.model-name.tooltip = The <i>model name</i> of the displayed object.
@@ -375,7 +375,7 @@ com.top_logic.demo.layout.form.demo.TestControlsForm = Test controls form
 com.top_logic.demo.layout.form.demo.TestControlsForm$ChangeValues = Change values
 com.top_logic.demo.layout.form.demo.TestControlsForm$ChangeValues.tooltip = Action that programatically changes values in all test fields.
 com.top_logic.demo.layout.form.demo.TestControlsForm$CheckAll = Check all
-com.top_logic.demo.layout.form.demo.TestControlsForm$CheckAll.tooltip = <i>Command handler</i> checking each <i>form field</i> for errors.
+com.top_logic.demo.layout.form.demo.TestControlsForm$CheckAll.tooltip = <i>Command</i> checking each <i>form field</i> for errors.
 com.top_logic.demo.layout.form.demo.TestControlsForm$GotoPersonComponent = Goto person component
 com.top_logic.demo.layout.form.demo.TestControlsForm$GotoPersonComponent.tooltip = Component shown in dialog. Only creates a command field to go to current user.
 com.top_logic.demo.layout.form.demo.TestControlsForm$ResetValues = Reset values
@@ -454,7 +454,7 @@ com.top_logic.demo.model.struct.DemoVec.x.tooltip = The X coordinate.
 com.top_logic.demo.model.struct.DemoVec.y = Y
 com.top_logic.demo.model.struct.DemoVec.y.tooltip = The Y coordinate.
 com.top_logic.demo.model.types.util.CreateLGridChildHandler = Create L grid child handler
-com.top_logic.demo.model.types.util.CreateLGridChildHandler.tooltip = <i>Command handler</i> that creates <i>demo plain A</i> child objects of <i>demo types L</i> nodes.
+com.top_logic.demo.model.types.util.CreateLGridChildHandler.tooltip = <i>Command</i> that creates <i>demo plain A</i> child objects of <i>demo types L</i> nodes.
 com.top_logic.demo.model.types.util.CyclicDemoTreeBuilder = Cyclic demo tree builder
 com.top_logic.demo.model.types.util.CyclicDemoTreeBuilder.tooltip = <i>Demo tree builder</i> that treats objects of type <code>"A"</code> in the attribute <code>"list"</code> as children.
 com.top_logic.demo.model.types.util.DeleteMailsCommand = Delete mails command
