--- a/com.top_logic.doc/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.doc/src/main/java/META-INF/messages_en.properties
@@ -10,13 +10,13 @@ com.top_logic.doc.TranslateCommandHandler.Config.recursive = Recursive
 com.top_logic.doc.TranslateCommandHandler.Config.recursive.tooltip = Whether not just the current page, but the whole subtree must be translated.
 com.top_logic.doc.TranslateCommandHandler.tooltip = An <i>command handler</i> translating the <i>page</i> selected in the <i>documentation tree component</i>.
 com.top_logic.doc.command.AbstractExportDocumentationCommand = Export documentation command
-com.top_logic.doc.command.AbstractExportDocumentationCommand.tooltip = A <i>command handler</i> that exports the documentation into the workspace.
+com.top_logic.doc.command.AbstractExportDocumentationCommand.tooltip = A <i>command</i> that exports the documentation into the workspace.
 com.top_logic.doc.command.AbstractImportExportDocumentationCommand = Import export documentation command
-com.top_logic.doc.command.AbstractImportExportDocumentationCommand.tooltip = Abstract <i>command handler</i> for import and export of documentation between the workspace and a running application.
+com.top_logic.doc.command.AbstractImportExportDocumentationCommand.tooltip = Abstract <i>command</i> for import and export of documentation between the workspace and a running application.
 com.top_logic.doc.command.ExportDocumentationAsZipCommand = Export documentation as zip command
 com.top_logic.doc.command.ExportDocumentationAsZipCommand.tooltip = Delivers the selected part of the documentation as ZIP download.
 com.top_logic.doc.command.ExportDocumentationIntoWorkspaceCommand = Export documentation into workspace command
-com.top_logic.doc.command.ExportDocumentationIntoWorkspaceCommand.tooltip = <i>Command handler</i> exporting the documentation to the workspace.
+com.top_logic.doc.command.ExportDocumentationIntoWorkspaceCommand.tooltip = <i>Command</i> exporting the documentation to the workspace.
 com.top_logic.doc.command.GenerateDocumentationCommand = Generate documentation command
 com.top_logic.doc.command.GenerateDocumentationCommand.Config.generator = Generator
 com.top_logic.doc.command.GenerateDocumentationCommand.Config.generator.tooltip = The <i>documentation generator</i> that does the actual generation.
@@ -28,7 +28,7 @@ com.top_logic.doc.command.ImportDocumentationAsZipCommand.ImportSettings.import-
 com.top_logic.doc.command.ImportDocumentationAsZipCommand.ImportSettings.import-data.tooltip = The data to import.
 com.top_logic.doc.command.ImportDocumentationAsZipCommand.tooltip = Command to import a Zip export of the docummentation.
 com.top_logic.doc.command.ImportDocumentationFromWorkspaceCommand = Import documentation from workspace command
-com.top_logic.doc.command.ImportDocumentationFromWorkspaceCommand.tooltip = A <i>command handler</i> that imports the documentation from the workspace.
+com.top_logic.doc.command.ImportDocumentationFromWorkspaceCommand.tooltip = A <i>command</i> that imports the documentation from the workspace.
 com.top_logic.doc.command.OpenDocumentationCommand = Open documentation command
 com.top_logic.doc.command.OpenDocumentationCommand.tooltip = Opens the documentation window.
 com.top_logic.doc.command.validation.PageValidators = Page validators
