--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -450,7 +450,7 @@ com.top_logic.element.layout.genericimport.GenericDataImportProgressComponent$St
 com.top_logic.element.layout.grid.AbstractGridCreateHandler = Grid-Handler erstellen
 com.top_logic.element.layout.grid.AbstractGridCreateHandler.Config.typeChooser = Typ-Auswahl
 com.top_logic.element.layout.grid.AbstractGridCreateHandler.Config.typeChooser.tooltip = Ob der Benutzer aus konkreten Untertypen des erstellten Typs wählen kann. <p> Der Wert dieser Option ist nur relevant, wenn es mehrere Typen zur Auswahl gibt. </p>
-com.top_logic.element.layout.grid.AbstractGridCreateHandler.tooltip = Basisklasse für <i>Befehlshandler</i>, die eine Erstellungsoperation in einer <i>Gitterkomponente</i> starten.
+com.top_logic.element.layout.grid.AbstractGridCreateHandler.tooltip = Basisklasse für <i>Befehle</i> zum Starten eines Erstellungsvorgangs in einer <i>Grid-Komponente</i>.
 com.top_logic.element.layout.grid.AbstractTreeGridBuilder = Baumgitter-Ersteller
 com.top_logic.element.layout.grid.AbstractTreeGridBuilder.tooltip = Gemeinsame Basisklasse für <i>Grid-Builder</i>, die baumstrukturierte Grids erstellen.
 com.top_logic.element.layout.grid.DefaultAccessorTableConfigProvider = Standard-Accessor-Tabellen-Konfigurationsanbieter
@@ -462,7 +462,7 @@ com.top_logic.element.layout.grid.DefaultGridSaveCommandHandler.tooltip = <i>Sta
 com.top_logic.element.layout.grid.GenericStructureCreateHandler = Generische Struktur erzeugen Handler
 com.top_logic.element.layout.grid.GenericStructureCreateHandler.Config.contextSelector = Kontext-Selektor
 com.top_logic.element.layout.grid.GenericStructureCreateHandler.Config.nodeType = Knotentyp
-com.top_logic.element.layout.grid.GenericStructureCreateHandler.tooltip = <i>Befehlshandler</i>, der <i>strukturierte Elemente</i> in einem <i>Gitterkomponentenkontext</i> erstellen kann.
+com.top_logic.element.layout.grid.GenericStructureCreateHandler.tooltip = <i>Befehl</i>, der <i>strukturierte Elemente</i> in einem <i>Grid-Komponenten-Kontext</i> erstellen kann.
 com.top_logic.element.layout.grid.GridBusinessObjectNaming$GridBusinessObjectName = Name für das Fachobjekt einer Grid-Zeile
 com.top_logic.element.layout.grid.GridBusinessObjectNaming$GridBusinessObjectName.tooltip = <i>Modellname</i> für das Fachobjekt einer Grid-Zeile.
 com.top_logic.element.layout.grid.GridBusinessObjectNaming.GridBusinessObjectName.grid-row = Grid-Zeile
@@ -555,7 +555,7 @@ com.top_logic.element.layout.grid.TreeGridBuilder.tooltip = <i>Grid-Builder</i> 
 com.top_logic.element.layout.grid.TreeGridExpandCollapseAll = Baumgitter erweitern einklappen alle
 com.top_logic.element.layout.grid.TreeGridExpandCollapseAll.tooltip = Erweitert oder klappt alle Knoten in der <i>Gitterkomponente</i> ein.
 com.top_logic.element.layout.instances.CreateInstanceHandler = Instanzhandler anlegen
-com.top_logic.element.layout.instances.CreateInstanceHandler.tooltip = <i>Befehlshandler</i>, der ein neues Grid-Zeilenobjekt des als Grid-Modell angegebenen Typs erzeugt (es wird erwartet, dass es vom Typ <i>Business-Objekttyp</i> ist).
+com.top_logic.element.layout.instances.CreateInstanceHandler.tooltip = <i>Befehl</i>, der ein neues Grid-Zeilenobjekt des als Grid-Modell angegebenen Typs erzeugt (es wird erwartet, dass es vom Typ <i>Business-Objekttyp</i> ist).
 com.top_logic.element.layout.instances.DirectInstancesTable = Tabelle der direkten Instanzen
 com.top_logic.element.layout.instances.DirectInstancesTable.tooltip = <i>Tabellenkonfigurations-Plugin</i>, das eine Tabelle mit dem Modell der sie umgebenden Komponente konfiguriert (in der Erwartung, dass es sich um einen <i>Geschäftsobjekttyp</i> handelt).
 com.top_logic.element.layout.instances.InstanceBrowserGrid = Instanz-Browser-Gitter
@@ -563,7 +563,7 @@ com.top_logic.element.layout.instances.InstanceBrowserGrid.tooltip = <i>Grid-Kom
 com.top_logic.element.layout.instances.export.InstanceExportCommand = Instanzexport
 com.top_logic.element.layout.instances.export.InstanceExportCommand.tooltip = <i>Befehlshandler</i>, der die ausgewählten Objekte in XML exportiert, um sie später wieder zu importieren.
 com.top_logic.element.layout.instances.importer.InstanceImportCommand = Befehl zum Importieren einer Instanz
-com.top_logic.element.layout.instances.importer.InstanceImportCommand.tooltip = <i>Befehlshandler</i>, der Objekte aus einer hochgeladenen XML-Datei importiert.
+com.top_logic.element.layout.instances.importer.InstanceImportCommand.tooltip = <i>Befehl</i> zum Importieren von Objekten aus einer hochgeladenen XML-Datei.
 com.top_logic.element.layout.instances.importer.UploadForm = Formular zum Hochladen
 com.top_logic.element.layout.instances.importer.UploadForm.data = Daten
 com.top_logic.element.layout.instances.importer.UploadForm.data.tooltip = Daten zum Hochladen. <p> Bei den Daten muss es sich um XML-kodierte Objekte in einem Format handeln, das zuvor aus diesem oder einem anderen System exportiert wurde. Wenn die importierten Objekte Verweise auf andere Objekte enthalten, die nicht im Datensatz enthalten sind, wird davon ausgegangen, dass diese Objekte bereits vor dem Import im System vorhanden sind. </p>
@@ -890,7 +890,7 @@ com.top_logic.element.layout.security.ExportingEditRolesProfileComponent = Expor
 com.top_logic.element.layout.security.ExportingEditRolesProfileComponent.tooltip = Register Sicherheitsexport
 com.top_logic.element.layout.security.RoleRulesComponent = Komponente Rollenregeln
 com.top_logic.element.layout.security.handler.SecurityExportHandler = Sicherheitsexport-Handler
-com.top_logic.element.layout.security.handler.SecurityExportHandler.tooltip = <i>Befehlshandler</i>, der einen Export für alle Sicherheitseinstellungen bereitstellt. <ul> <li>Attribut-Klassifizierungen</li> <li>Berechtigungen für Rollen auf Attributklassifikationen</li> <li>Regeln für die Zuordnung von Rollen zu Objekten.</li> <li>Zugriffsrechte für Rollen auf Komponenten.</li> <li>Gruppenzuordnungen für Personen.</li> </ul>
+com.top_logic.element.layout.security.handler.SecurityExportHandler.tooltip = <i>Befehl</i>, der einen Export aller Berechtigungen ermöglicht. <ul> <li>Attribut-Klassifizierungen</li> <li>Berechtigungen für Rollen auf Attributklassifizierungen</li> <li>Regeln für die Zuweisung von Rollen auf Objekten.</li> <li>Zugriffsrechte für Rollen auf Komponenten.</li> <li>Gruppenzuweisungen für Personen.</li> </ul>
 com.top_logic.element.layout.structured.AdminElementComponent = Komponente des Verwaltungselements
 com.top_logic.element.layout.structured.AdminElementComponent$StructuredElementSwitchEditCommandHandler = Befehlshandler zum Bearbeiten von Schaltern strukturierter Elemente
 com.top_logic.element.layout.structured.AdminElementComponent.Config.editRoot = Wurzel bearbeiten
@@ -1085,8 +1085,8 @@ com.top_logic.element.meta.form.component.AttributedCompareCommandHandler.toolti
 com.top_logic.element.meta.form.component.DefaultApplyAttributedCommandHandler = Standard-Befehlshandler für Anwendungsobjekte
 com.top_logic.element.meta.form.component.DefaultApplyAttributedCommandHandler.tooltip = Aktualisiert alle Attribute für die entsprechenden Felder im <i>Formularkontext</i>.
 com.top_logic.element.meta.form.component.DefaultEditAttributedComponent = Standardmäßig bearbeitetes Teilobjekt
-com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.applyCommand.tooltip = Name des <i>Befehlshandlers</i>, der verwendet wird, um Änderungen auf das bearbeitete Objekt anzuwenden.
-com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.deleteCommand.tooltip = Name des <i>Befehlshandlers</i>, der zum Löschen des bearbeiteten Objekts verwendet wird.
+com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.applyCommand.tooltip = Name des <i>Befehls</i>, mit dem Änderungen auf das bearbeitete Objekt angewendet werden.
+com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.deleteCommand.tooltip = Name des <i>Befehls</i>, der zum Löschen des bearbeiteten Objekts verwendet wird.
 com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.metaElementName = Meta-Element-Name
 com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.metaElementName.tooltip = Konfiguration des Namens des <i>Business-Objekttyps</i>, den ein Objekt haben muss, um von einer <i>Standardkomponente zur Objektbearbeitung</i> bearbeitet zu werden.
 com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.tooltip = Einfache Implementierung des <i>Teilobjektes bearbeiten</i>.
@@ -1207,7 +1207,7 @@ com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.Config.numb
 com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.Config.number-handler.tooltip = Optionaler Name eines <i>iD-Generators</i> zur Erzeugung einer eindeutigen ID für das neu erstellte Objekt. <p> Falls angegeben, muss auch die <i>Unique ID</i> konfiguriert werden. </p>
 com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.Config.unique-id = Eindeutige ID
 com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.Config.unique-id.tooltip = Optionaler Name eines ID-Attributs im neu erstellten Objekt, in dem die von <i>Number Handler</i> generierte ID gespeichert werden soll. <p> Dieser Wert wird nur verwendet, wenn auch <i>Number handler</i> angegeben wird. </p>
-com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.tooltip = <i>Befehlshandler</i> zum Erstellen eines <i>Objekts</i> mit einem bestimmten Typnamen.
+com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.tooltip = <i>Befehl</i> zum Erstellen eines <i>Objekts</i> mit einem bestimmten Typnamen.
 com.top_logic.element.meta.gui.DefaultCreateAttributedComponent = Standardmäßig Objektbestandteil anlegen
 com.top_logic.element.meta.gui.DefaultCreateAttributedComponent.tooltip = Standardkomponente zum Erstellen eines <i>Objektes</i>, das <b>KEIN</b> <i>strukturiertes Element</i> ist.
 com.top_logic.element.meta.kbbased.KBBasedMetaAttribute$GlobalConfig = Globale Konfiguration
@@ -1541,9 +1541,9 @@ com.top_logic.element.model.diff.config.UpdateStorageMapping.storage-mapping = S
 com.top_logic.element.model.diff.config.UpdateStorageMapping.storage-mapping.tooltip = Die <i>Speicherabbildung</i>, die beim Laden und Speichern von Werten anzuwenden ist.
 com.top_logic.element.model.diff.config.UpdateStorageMapping.tooltip = Aktualisiert die <i>Abbildung</i> eines <i>Primitivs</i> im <i>Speicher</i>.
 com.top_logic.element.model.export.ui.IDEModelExtractCommand = IDE-Modell-Extrakt-Befehl
-com.top_logic.element.model.export.ui.IDEModelExtractCommand.tooltip = <i>Befehlshandler</i>, der ein ausgewähltes Modul im Modelleditor zurück in die Entwicklungsumgebung speichert, in der die Anwendung ausgeführt wird.
+com.top_logic.element.model.export.ui.IDEModelExtractCommand.tooltip = <i>Befehl</i> zum Speichern eines ausgewählten Moduls im Modelleditor zurück in die Entwicklungsumgebung, in der die Anwendung ausgeführt wird.
 com.top_logic.element.model.export.ui.ModelExportCommand = Modell-Exportbefehl
-com.top_logic.element.model.export.ui.ModelExportCommand.tooltip = <i>Befehlshandler</i> zur Durchführung eines Modellexports in der <i>TopLogic</i>-eigenen Konfigurationssyntax.
+com.top_logic.element.model.export.ui.ModelExportCommand.tooltip = <i>Befehl</i> zur Durchführung eines Modellexports in der <i>TopLogic-eigenen</i> Konfigurationssyntax.
 com.top_logic.element.model.i18n.I18NAttributeStorage = Speicherung von Internationalisierungsattributen
 com.top_logic.element.model.i18n.I18NAttributeStorage.tooltip = <i>Assoziationsabfrage-basierter Speicher</i> zum Speichern von <i>Ressourcenschlüsseln</i>.
 com.top_logic.element.model.importer.XMIModelImportHandler = XMI-Modell-Import-Handler
@@ -1553,7 +1553,7 @@ com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.model-def
 com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.model-definition.tooltip = Die zu verarbeitende Modelldatei.
 com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.partial-import = Partieller Import
 com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.partial-import.tooltip = Ob dieser Modellimport bestehende Module ersetzen oder erweitern soll. <ul> <li><code>true</code>, wenn die Typen der importierten Module zu den Typen der bestehenden Module hinzugefügt werden. Ein Typ, der importiert wird und den gleichen Namen wie ein vorhandener Typ hat, ersetzt diesen.</li> <li><code>false</code>, wenn importierte Module bestehende Module ersetzen.</li> </ul>
-com.top_logic.element.model.importer.XMIModelImportHandler.tooltip = <i>Befehlshandler</i>, der einen Modelldefinitions-Upload anfordert und die Änderungen auf das aktuelle Anwendungsmodell anwendet. <p> Dieser Handler ist in der Lage, <i>TopLogic-Modelldefinitions-XML-Dateien</i> und UML/XMI-Modelldefinitionen zu verarbeiten. </p>
+com.top_logic.element.model.importer.XMIModelImportHandler.tooltip = <i>Befehl</i> zur Anforderung eines Modelldefinitions-Uploads und zur Anwendung der Änderungen auf das aktuelle Anwendungsmodell. <p> Dieser Handler ist in der Lage, <i>TopLogic-Modelldefinitions-XML-Dateien</i> und UML/XMI-Modelldefinitionen zu verarbeiten. </p>
 com.top_logic.element.model.migration.AbstractMoveCompositionLinks = Verschieben von Links zur Komposition
 com.top_logic.element.model.migration.AbstractMoveCompositionLinks.Config.reference = Referenz
 com.top_logic.element.model.migration.AbstractMoveCompositionLinks.Config.reference.tooltip = Name der <i>Kompositionsreferenz</i>, deren Werte verschoben werden müssen.
@@ -2183,9 +2183,9 @@ com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.i18n-
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.i18n-reason-key.tooltip = Grund für die Deaktivierung des Befehls für Stammobjekte.
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.tooltip = <i>Ausführbarkeitsregel</i>, die einen Befehl für einen Struktur-Wurzelknoten deaktiviert oder verbirgt.
 com.top_logic.element.util.dbadmin.DeleteTable = Tabelle löschen
-com.top_logic.element.util.dbadmin.DeleteTable.tooltip = <i>Befehlshandler</i>, der einen Tabellentyp entfernt, wenn er nicht verwendet wird.
+com.top_logic.element.util.dbadmin.DeleteTable.tooltip = <i>Befehl</i>, der einen Tabellentyp entfernt, wenn er nicht verwendet wird.
 com.top_logic.element.util.dbadmin.IDESchemaExtractCommand = Befehl zum Extrahieren von IDE-Schemata
-com.top_logic.element.util.dbadmin.IDESchemaExtractCommand.tooltip = <i>Befehlshandler</i>, der die Schemakonfiguration in das Dateisystem zurückschreibt. <p> Beim nächsten Booten werden die Änderungen übernommen (wenn nur Änderungen durchgeführt werden, die eine automatische Migration unterstützen). </p>
+com.top_logic.element.util.dbadmin.IDESchemaExtractCommand.tooltip = <i>Befehl</i>, der die Schemakonfiguration in das Dateisystem zurückschreibt. <p> Beim nächsten Start werden die Änderungen übernommen (wenn nur Änderungen vorgenommen werden, die eine automatische Migration unterstützen). </p>
 com.top_logic.element.util.dbadmin.TableUsageListModelBuilder = Modellersteller für Tabellenverwendungslisten
 com.top_logic.element.util.dbadmin.TableUsageListModelBuilder.Config.schema = Schema
 com.top_logic.element.util.dbadmin.TableUsageListModelBuilder.Config.schema.tooltip = Die Eigenschaft, auf die zur Generierung der Inhalte zugegriffen werden muss.
