--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -450,7 +450,7 @@ com.top_logic.element.layout.genericimport.GenericDataImportProgressComponent$St
 com.top_logic.element.layout.grid.AbstractGridCreateHandler = Grid create handler
 com.top_logic.element.layout.grid.AbstractGridCreateHandler.Config.typeChooser = Type chooser
 com.top_logic.element.layout.grid.AbstractGridCreateHandler.Config.typeChooser.tooltip = Whether the user can choose from concrete sub-types of the create type. <p> The value of this option is only relevant when there are multiple types to choose from. </p>
-com.top_logic.element.layout.grid.AbstractGridCreateHandler.tooltip = Base class for <i>command handlers</i> starting a create operation in a <i>grid component</i>.
+com.top_logic.element.layout.grid.AbstractGridCreateHandler.tooltip = Base class for <i>commands</i> starting a create operation in a <i>grid component</i>.
 com.top_logic.element.layout.grid.AbstractTreeGridBuilder = Tree grid builder
 com.top_logic.element.layout.grid.AbstractTreeGridBuilder.tooltip = Common base class for <i>grid builders</i> creating tree-structured grids.
 com.top_logic.element.layout.grid.DefaultAccessorTableConfigProvider = Default accessor table configuration provider
@@ -462,7 +462,7 @@ com.top_logic.element.layout.grid.DefaultGridSaveCommandHandler.tooltip = <i>Def
 com.top_logic.element.layout.grid.GenericStructureCreateHandler = Generic structure create handler
 com.top_logic.element.layout.grid.GenericStructureCreateHandler.Config.contextSelector = Context selector
 com.top_logic.element.layout.grid.GenericStructureCreateHandler.Config.nodeType = Node type
-com.top_logic.element.layout.grid.GenericStructureCreateHandler.tooltip = <i>Command handler</i> that can create <i>structured elements</i> in a <i>grid component</i> context.
+com.top_logic.element.layout.grid.GenericStructureCreateHandler.tooltip = <i>Command</i> that can create <i>structured elements</i> in a <i>grid component</i> context.
 com.top_logic.element.layout.grid.GridBusinessObjectNaming$GridBusinessObjectName = Grid business object name
 com.top_logic.element.layout.grid.GridBusinessObjectNaming$GridBusinessObjectName.tooltip = <i>Model name</i> for the business object of a grid row.
 com.top_logic.element.layout.grid.GridBusinessObjectNaming.GridBusinessObjectName.grid-row = Grid row
@@ -555,7 +555,7 @@ com.top_logic.element.layout.grid.TreeGridBuilder.tooltip = <i>Grid builder</i> 
 com.top_logic.element.layout.grid.TreeGridExpandCollapseAll = Tree grid expand collapse all
 com.top_logic.element.layout.grid.TreeGridExpandCollapseAll.tooltip = Expands or collapse all nodes in the <i>grid component</i>.
 com.top_logic.element.layout.instances.CreateInstanceHandler = Create instance handler
-com.top_logic.element.layout.instances.CreateInstanceHandler.tooltip = <i>Command handler</i> that creates new grid row object of the type given as the grid's model (which is expected to be of type <i>business object type</i>).
+com.top_logic.element.layout.instances.CreateInstanceHandler.tooltip = <i>Command</i> that creates new grid row object of the type given as the grid's model (which is expected to be of type <i>business object type</i>).
 com.top_logic.element.layout.instances.DirectInstancesTable = Direct instances table
 com.top_logic.element.layout.instances.DirectInstancesTable.tooltip = <i>Table configuration plug-in</i> that configures a table with it's surrounding component's model (expecting it to be a <i>business object type</i>).
 com.top_logic.element.layout.instances.InstanceBrowserGrid = Instance browser grid
@@ -563,7 +563,7 @@ com.top_logic.element.layout.instances.InstanceBrowserGrid.tooltip = <i>Grid com
 com.top_logic.element.layout.instances.export.InstanceExportCommand = Instance export command
 com.top_logic.element.layout.instances.export.InstanceExportCommand.tooltip = <i>Command handler</i> exporting the selected objects to XML for later re-import.
 com.top_logic.element.layout.instances.importer.InstanceImportCommand = Instance import command
-com.top_logic.element.layout.instances.importer.InstanceImportCommand.tooltip = <i>Command handler</i> importing objects from an uploaded XML file.
+com.top_logic.element.layout.instances.importer.InstanceImportCommand.tooltip = <i>Command</i> importing objects from an uploaded XML file.
 com.top_logic.element.layout.instances.importer.UploadForm = Upload form
 com.top_logic.element.layout.instances.importer.UploadForm.data = Data
 com.top_logic.element.layout.instances.importer.UploadForm.data.tooltip = Data to upload. <p> The data must be XML-encoded objects in a format formerly exported from this or another system. If the imported objects contain references to other object not in the data set, it is expected that these objects already exist in the system before import. </p>
@@ -890,7 +890,7 @@ com.top_logic.element.layout.security.ExportingEditRolesProfileComponent = Expor
 com.top_logic.element.layout.security.ExportingEditRolesProfileComponent.tooltip = Register security export
 com.top_logic.element.layout.security.RoleRulesComponent = Role rules component
 com.top_logic.element.layout.security.handler.SecurityExportHandler = Security export handler
-com.top_logic.element.layout.security.handler.SecurityExportHandler.tooltip = <i>Command handler</i> providing an export for all security settings. <ul> <li>Attribute classifications</li> <li>Permissions for roles on attribute classifications</li> <li>Rules for assigning roles on objects.</li> <li>Access rights for roles on components.</li> <li>Group assignments for persons.</li> </ul>
+com.top_logic.element.layout.security.handler.SecurityExportHandler.tooltip = <i>Command</i> providing an export for all security settings. <ul> <li>Attribute classifications</li> <li>Permissions for roles on attribute classifications</li> <li>Rules for assigning roles on objects.</li> <li>Access rights for roles on components.</li> <li>Group assignments for persons.</li> </ul>
 com.top_logic.element.layout.structured.AdminElementComponent = Admin element component
 com.top_logic.element.layout.structured.AdminElementComponent$StructuredElementSwitchEditCommandHandler = Structured element switch edit command handler
 com.top_logic.element.layout.structured.AdminElementComponent.Config.editRoot = Edit root
@@ -1085,8 +1085,8 @@ com.top_logic.element.meta.form.component.AttributedCompareCommandHandler.toolti
 com.top_logic.element.meta.form.component.DefaultApplyAttributedCommandHandler = Default apply object command handler
 com.top_logic.element.meta.form.component.DefaultApplyAttributedCommandHandler.tooltip = Updates all attributes for the corresponding fields in the <i>form context</i>.
 com.top_logic.element.meta.form.component.DefaultEditAttributedComponent = Default edit object component
-com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.applyCommand.tooltip = Name of the <i>command handler</i> used to apply changes to the edited object.
-com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.deleteCommand.tooltip = Name of the <i>command handler</i> used to delete the edited object.
+com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.applyCommand.tooltip = Name of the <i>command</i> used to apply changes to the edited object.
+com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.deleteCommand.tooltip = Name of the <i>command</i> used to delete the edited object.
 com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.metaElementName = Meta element name
 com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.Config.metaElementName.tooltip = Configuration of the name of the <i>business object type</i> an object must have to be edited by a <i>default edit object component</i>.
 com.top_logic.element.meta.form.component.DefaultEditAttributedComponent.tooltip = Simple implementation of <i>edit object component</i>.
@@ -1207,7 +1207,7 @@ com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.Config.numb
 com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.Config.number-handler.tooltip = Optional name of a <i>ID generator</i> to generate a unique ID for the newly created object. <p> If given, <i>Unique ID</i> must be configured, too. </p>
 com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.Config.unique-id = Unique ID
 com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.Config.unique-id.tooltip = Optional name of an ID attribute in the newly created object, the generated ID from <i>Number handler</i> should be stored in. <p> This value is only used, if <i>Number handler</i> is given, too. </p>
-com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.tooltip = <i>Command handler</i> to create a <i>object</i> with a certain type name.
+com.top_logic.element.meta.gui.DefaultCreateAttributedCommandHandler.tooltip = <i>Command</i> to create a <i>object</i> with a certain type name.
 com.top_logic.element.meta.gui.DefaultCreateAttributedComponent = Default create object component
 com.top_logic.element.meta.gui.DefaultCreateAttributedComponent.tooltip = Default component to create an <i>object</i> object which is <b>NO</b> <i>structured element</i>.
 com.top_logic.element.meta.kbbased.KBBasedMetaAttribute$GlobalConfig = Global configuration
@@ -1541,9 +1541,9 @@ com.top_logic.element.model.diff.config.UpdateStorageMapping.storage-mapping = S
 com.top_logic.element.model.diff.config.UpdateStorageMapping.storage-mapping.tooltip = The <i>storage mapping</i> to apply when loading and storing values.
 com.top_logic.element.model.diff.config.UpdateStorageMapping.tooltip = Updates the <i>storage mapping</i> of a <i>primitive</i>.
 com.top_logic.element.model.export.ui.IDEModelExtractCommand = IDE model extract command
-com.top_logic.element.model.export.ui.IDEModelExtractCommand.tooltip = <i>Command handler</i> storing a selected module in the model editor back to the development environment in which the app is running.
+com.top_logic.element.model.export.ui.IDEModelExtractCommand.tooltip = <i>Command</i> storing a selected module in the model editor back to the development environment in which the app is running.
 com.top_logic.element.model.export.ui.ModelExportCommand = Model export command
-com.top_logic.element.model.export.ui.ModelExportCommand.tooltip = <i>Command handler</i> performing a model export in the <i>TopLogic</i>-native configuration syntax.
+com.top_logic.element.model.export.ui.ModelExportCommand.tooltip = <i>Command</i> performing a model export in the <i>TopLogic</i>-native configuration syntax.
 com.top_logic.element.model.i18n.I18NAttributeStorage = Internationalization attribute storage
 com.top_logic.element.model.i18n.I18NAttributeStorage.tooltip = <i>Association query based storage</i> to store <i>resource keys</i>.
 com.top_logic.element.model.importer.XMIModelImportHandler = XMI model import handler
@@ -1553,7 +1553,7 @@ com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.model-def
 com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.model-definition.tooltip = The model file to process.
 com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.partial-import = Partial import
 com.top_logic.element.model.importer.XMIModelImportHandler.ModelUpload.partial-import.tooltip = Whether this model import should replace or extend existing modules. <ul> <li><code>true</code> if types of imported modules are added to the types of existing modules. A type that is imported and has the same name as an existing type replaces it.</li> <li><code>false</code> if imported modules replace existing modules.</li> </ul>
-com.top_logic.element.model.importer.XMIModelImportHandler.tooltip = <i>Command handler</i> requesting a model definition upload and applying the changes to the current application model. <p> This handler is able to process <i>TopLogic</i> model definition XML files and UML/XMI model definitions. </p>
+com.top_logic.element.model.importer.XMIModelImportHandler.tooltip = <i>Command</i> requesting a model definition upload and applying the changes to the current application model. <p> This handler is able to process <i>TopLogic</i> model definition XML files and UML/XMI model definitions. </p>
 com.top_logic.element.model.migration.AbstractMoveCompositionLinks = Move composition links
 com.top_logic.element.model.migration.AbstractMoveCompositionLinks.Config.reference = Reference
 com.top_logic.element.model.migration.AbstractMoveCompositionLinks.Config.reference.tooltip = Name of the composition <i>reference</i> whose values must be moved.
@@ -2183,9 +2183,9 @@ com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.i18n-
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.Config.i18n-reason-key.tooltip = Reason to disable the command for root objects.
 com.top_logic.element.structured.util.StructureRootDisabledExecRule.tooltip = <i>Executability rule</i> that disables or hides a command for a structure root node.
 com.top_logic.element.util.dbadmin.DeleteTable = Delete table
-com.top_logic.element.util.dbadmin.DeleteTable.tooltip = <i>Command handler</i> that removes a table type, if it is not used.
+com.top_logic.element.util.dbadmin.DeleteTable.tooltip = <i>Command</i> that removes a table type, if it is not used.
 com.top_logic.element.util.dbadmin.IDESchemaExtractCommand = IDE schema extract command
-com.top_logic.element.util.dbadmin.IDESchemaExtractCommand.tooltip = <i>Command handler</i> that writes back the schema configuration to the file system. <p> During next boot, the changes will be applied (if only changes are performed that support automatic migration). </p>
+com.top_logic.element.util.dbadmin.IDESchemaExtractCommand.tooltip = <i>Command</i> that writes back the schema configuration to the file system. <p> During next boot, the changes will be applied (if only changes are performed that support automatic migration). </p>
 com.top_logic.element.util.dbadmin.TableUsageListModelBuilder = Table usage list model builder
 com.top_logic.element.util.dbadmin.TableUsageListModelBuilder.Config.schema = Schema
 com.top_logic.element.util.dbadmin.TableUsageListModelBuilder.Config.schema.tooltip = The property to access for generating the contents.
