--- a/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_de.properties
@@ -62,7 +62,7 @@ com.top_logic.layout.formeditor.parts.template.ButtonVariable.Config.button = Sc
 com.top_logic.layout.formeditor.parts.template.ButtonVariable.Config.button.tooltip = Befehl zum Einbetten in die Vorlage.
 com.top_logic.layout.formeditor.parts.template.ButtonVariable.Config.buttonStyle = Darstellung
 com.top_logic.layout.formeditor.parts.template.ButtonVariable.Config.buttonStyle.tooltip = Stil des Knopfes.
-com.top_logic.layout.formeditor.parts.template.ButtonVariable.tooltip = <i>Variablendefinition</i> zur Einbettung eines <i>Command Handlers</i> in eine HTML-Vorlage.
+com.top_logic.layout.formeditor.parts.template.ButtonVariable.tooltip = <i>Variablendefinition</i> zur Einbettung eines <i>Befehls</i> in eine HTML-Vorlage.
 com.top_logic.layout.formeditor.parts.template.EmbeddedForm = Eingebettetes Formular
 com.top_logic.layout.formeditor.parts.template.EmbeddedForm.Config.formDefinition = Definition des Formulars
 com.top_logic.layout.formeditor.parts.template.EmbeddedForm.Config.formDefinition.tooltip = Das zu rendernde Formular.
@@ -92,7 +92,7 @@ com.top_logic.layout.formeditor.parts.template.LinkDefinition.tooltip = Definiti
 com.top_logic.layout.formeditor.parts.template.MenuVariable = Menü
 com.top_logic.layout.formeditor.parts.template.MenuVariable.Config.buttons = Buttons
 com.top_logic.layout.formeditor.parts.template.MenuVariable.Config.buttons.tooltip = Befehl zum Einbetten in die Vorlage.
-com.top_logic.layout.formeditor.parts.template.MenuVariable.tooltip = <i>Variablendefinition</i> für die Einbettung einer Menüschaltfläche mit mehreren <i>Befehlshandlern</i> in eine HTML-Vorlage.
+com.top_logic.layout.formeditor.parts.template.MenuVariable.tooltip = <i>Variablendefinition</i> zum Einbetten einer Menüschaltfläche mit mehreren <i>Befehlen</i> in eine HTML-Vorlage.
 com.top_logic.layout.formeditor.parts.template.UIAction = UI-Aktion
 com.top_logic.layout.formeditor.parts.template.UIAction.Config.target-object = Zielobjekt
 com.top_logic.layout.formeditor.parts.template.UIAction.Config.target-object.tooltip = Funktion, die das gerenderte Objekt als Argument nimmt und das Objekt berechnet, das beim Anklicken angezeigt werden soll. <p> Standardmäßig wird das gerenderte Objekt angezeigt. </p>
