--- a/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.layout.formeditor/src/main/java/META-INF/messages_en.properties
@@ -62,7 +62,7 @@ com.top_logic.layout.formeditor.parts.template.ButtonVariable.Config.button = Bu
 com.top_logic.layout.formeditor.parts.template.ButtonVariable.Config.button.tooltip = Command to embed into the template.
 com.top_logic.layout.formeditor.parts.template.ButtonVariable.Config.buttonStyle = Button style
 com.top_logic.layout.formeditor.parts.template.ButtonVariable.Config.buttonStyle.tooltip = Style of the button.
-com.top_logic.layout.formeditor.parts.template.ButtonVariable.tooltip = <i>Variable definition</i> for embedding a <i>command handler</i> into a HTML template.
+com.top_logic.layout.formeditor.parts.template.ButtonVariable.tooltip = <i>Variable definition</i> for embedding a <i>command</i> into a HTML template.
 com.top_logic.layout.formeditor.parts.template.EmbeddedForm = Embedded form
 com.top_logic.layout.formeditor.parts.template.EmbeddedForm.Config.formDefinition = Form definition
 com.top_logic.layout.formeditor.parts.template.EmbeddedForm.Config.formDefinition.tooltip = The form to render.
@@ -92,7 +92,7 @@ com.top_logic.layout.formeditor.parts.template.LinkDefinition.tooltip = Definiti
 com.top_logic.layout.formeditor.parts.template.MenuVariable = Menu
 com.top_logic.layout.formeditor.parts.template.MenuVariable.Config.buttons = Buttons
 com.top_logic.layout.formeditor.parts.template.MenuVariable.Config.buttons.tooltip = Command to embed into the template.
-com.top_logic.layout.formeditor.parts.template.MenuVariable.tooltip = <i>Variable definition</i> for embedding a menu button with multiple <i>command handlers</i> into a HTML template.
+com.top_logic.layout.formeditor.parts.template.MenuVariable.tooltip = <i>Variable definition</i> for embedding a menu button with multiple <i>commands</i> into a HTML template.
 com.top_logic.layout.formeditor.parts.template.UIAction = UI action
 com.top_logic.layout.formeditor.parts.template.UIAction.Config.target-object = Target object
 com.top_logic.layout.formeditor.parts.template.UIAction.Config.target-object.tooltip = Function taking the rendered object as argument and computing the object that should be displayed when clicking. <p> By default, the rendered object is displayed. </p>
