--- a/com.top_logic.layout.scripting.template/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.layout.scripting.template/src/main/java/META-INF/messages_de.properties
@@ -133,7 +133,7 @@ com.top_logic.layout.scripting.template.fuzzy.FormFuzzyInput$Op.tooltip = Standa
 com.top_logic.layout.scripting.template.fuzzy.FormFuzzyInput.value = Wert
 com.top_logic.layout.scripting.template.fuzzy.FormFuzzyInput.value.tooltip = Formatierter Wert.
 com.top_logic.layout.scripting.template.gui.ActionReplayCommand = Befehl zum Wiederholen von Aktionen
-com.top_logic.layout.scripting.template.gui.ActionReplayCommand.tooltip = Gemeinsame Basisklasse für <i>Befehlshandler</i>, die die Skriptausführung steuern.
+com.top_logic.layout.scripting.template.gui.ActionReplayCommand.tooltip = Gemeinsame Basisklasse für <i>Befehle</i> zur Steuerung der Skriptausführung.
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction = Anwendungsaktion anwenden
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction$Mode = Modus
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction$Mode.tooltip = Der Skriptausführungsmodus.
@@ -147,16 +147,16 @@ com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.Mode.STEP_OUT
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.Mode.STEP_OUT.tooltip = Ausführen bis zum Ende der aktuellen Gruppe.
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.Mode.STEP_OVER = Treten Sie über
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.Mode.STEP_OVER.tooltip = Führen Sie die gesamte ausgewählte Gruppe einschließlich aller absteigenden Aktionen aus.
-com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.tooltip = <i>Befehlshandler</i>, der die ausgewählte Aktion ausführt.
+com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.tooltip = <i>Befehl</i>, der die ausgewählte Aktion ausführt.
 com.top_logic.layout.scripting.template.gui.SaveScriptCommand = Skript-Befehl speichern
-com.top_logic.layout.scripting.template.gui.SaveScriptCommand.tooltip = Ein <i>Befehlshandler</i>, der den <i>persistenten Skript-Container</i> speichert, der die Auswahl seiner <i>auswählbaren</i> Komponente ist.
+com.top_logic.layout.scripting.template.gui.SaveScriptCommand.tooltip = Ein <i>Befehl</i>, der den <i>persistenten Skript-Container</i> speichert, der die Auswahl seiner <i>wählbaren</i> Komponente darstellt.
 com.top_logic.layout.scripting.template.gui.ScriptRecorderComponent = Skript-Rekorder-Komponente
 com.top_logic.layout.scripting.template.gui.ScriptRecorderComponent.Config.xml-display = XML-Anzeige
 com.top_logic.layout.scripting.template.gui.ScriptRecorderComponent.Config.xml-display.tooltip = <i>XML-Prety-Printer-Konfiguration</i> für die Anzeige von Aktionen als XML.
 com.top_logic.layout.scripting.template.gui.ScriptRecorderComponent.tooltip = Zeigt eine <i>Anwendungsaktion</i> als XML an. Wenn der Benutzer die Aktion bearbeitet, werden die Änderungen geparst und die neue <i>Anwendungsaktion</i> wird angezeigt.
 com.top_logic.layout.scripting.template.gui.ScriptRecorderTree = Skript-Rekorder-Baum
 com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Delete = löschen
-com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Delete.tooltip = <i>Befehlshandler</i>, der die ausgewählte Aktion löscht.
+com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Delete.tooltip = <i>Befehl</i> zum Löschen der ausgewählten Aktion.
 com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Group = Gruppe
 com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Paste = Einfügen
 com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Start = Start
@@ -175,15 +175,15 @@ com.top_logic.layout.scripting.template.gui.ScriptUploadComponent.tooltip = Eine
 com.top_logic.layout.scripting.template.gui.ScriptingRecorderDropTarget = Ablageziel des Skript-Rekorders
 com.top_logic.layout.scripting.template.gui.ScriptingRecorderDropTarget.tooltip = Drop-Handling für den <i>Skriptaufzeichnungsbaum</i>.
 com.top_logic.layout.scripting.template.gui.StartBackgroundReplayCommand = Befehl zum Starten der Hintergrundwiedergabe
-com.top_logic.layout.scripting.template.gui.StartBackgroundReplayCommand.tooltip = <i>Befehlshandler</i>, der eine Skriptausführung in einer neuen Sitzung anzeigt.
+com.top_logic.layout.scripting.template.gui.StartBackgroundReplayCommand.tooltip = <i>Befehl</i>, der eine Skriptausführung in einer neuen Sitzung angibt.
 com.top_logic.layout.scripting.template.gui.StopActionReplay = Aktionswiederholung stoppen
-com.top_logic.layout.scripting.template.gui.StopActionReplay.tooltip = <i>Befehlshandler</i>, der ein aktuell laufendes Skript stoppt.
+com.top_logic.layout.scripting.template.gui.StopActionReplay.tooltip = <i>Befehl</i> zum Anhalten eines laufenden Skripts.
 com.top_logic.layout.scripting.template.gui.StoreCurrentRevisionCommand = Befehl zum Speichern der aktuellen Revision
 com.top_logic.layout.scripting.template.gui.StoreCurrentRevisionCommand.tooltip = <i>Befehlshandler</i>, der die letzte Revision in eine globale Variable speichert und dafür eine Aktion erzeugt.
 com.top_logic.layout.scripting.template.gui.SwitchRecordAllCommands = Alle Befehle aufzeichnen umschalten
-com.top_logic.layout.scripting.template.gui.SwitchRecordAllCommands.tooltip = <i>Befehlshandler</i>, mit dem die Eigenschaft umgeschaltet werden kann, ob alle Befehle in der Sitzung aufgezeichnet werden.
+com.top_logic.layout.scripting.template.gui.SwitchRecordAllCommands.tooltip = <i>Befehl</i>, mit dem die Eigenschaft umgeschaltet werden kann, ob alle Befehle in der Sitzung aufgezeichnet werden.
 com.top_logic.layout.scripting.template.gui.SwitchRecordTechnicalCommands = Technische Befehle zum Aufzeichnen umschalten
-com.top_logic.layout.scripting.template.gui.SwitchRecordTechnicalCommands.tooltip = <i>Befehlshandler</i>, mit dem die Eigenschaft umgeschaltet werden kann, ob in der aktuellen Sitzung technische Befehle aufgezeichnet werden.
+com.top_logic.layout.scripting.template.gui.SwitchRecordTechnicalCommands.tooltip = Mit <i>dem Befehl</i> kann die Eigenschaft umgeschaltet werden, ob technische Befehle in der aktuellen Sitzung aufgezeichnet werden.
 com.top_logic.layout.scripting.template.gui.saveas.SaveScriptAsCommand = Skript als Befehl speichern
 com.top_logic.layout.scripting.template.gui.saveas.SaveScriptAsCommand.tooltip = Speichert eine <i>Anwendungsaktion</i> in einer <i>Datei</i>.
 com.top_logic.layout.scripting.template.gui.saveas.SaveScriptAsFormBuilder = Skript als Formularerstellung speichern
@@ -199,7 +199,7 @@ com.top_logic.layout.scripting.template.gui.templates.AbstractTemplateFormBuilde
 com.top_logic.layout.scripting.template.gui.templates.AbstractTemplateFormBuilder.Config.xml-storage.tooltip = <i>XML Pretty-Druckerkonfiguration</i> zum Speichern der Vorlage.
 com.top_logic.layout.scripting.template.gui.templates.AbstractTemplateFormBuilder.tooltip = <i>Komponente</i> für die Bearbeitung von Vorlagen.
 com.top_logic.layout.scripting.template.gui.templates.DeleteTemplateCommand = Befehl Vorlage löschen
-com.top_logic.layout.scripting.template.gui.templates.DeleteTemplateCommand.tooltip = <i>Befehlshandler</i> zum Löschen einer Vorlagenressource.
+com.top_logic.layout.scripting.template.gui.templates.DeleteTemplateCommand.tooltip = <i>Befehl</i> zum Löschen einer Vorlagenressource.
 com.top_logic.layout.scripting.template.gui.templates.DownloadAllScriptRecorderTemplatesHandler = Alle Skriptschreiber-Vorlagen-Handler herunterladen
 com.top_logic.layout.scripting.template.gui.templates.DownloadAllScriptRecorderTemplatesHandler.tooltip = Handler zum Herunterladen aller ScriptRecorder-Vorlagen.
 com.top_logic.layout.scripting.template.gui.templates.DownloadScriptRecorderTemplateFoldersHandler = Skript-Rekorder-Vorlagenordner-Handler herunterladen
@@ -209,9 +209,9 @@ com.top_logic.layout.scripting.template.gui.templates.DownloadScriptRecorderTemp
 com.top_logic.layout.scripting.template.gui.templates.DownloadSelectedTemplateFolderHandler = Ausgewählten Vorlagen-Ordner-Handler herunterladen
 com.top_logic.layout.scripting.template.gui.templates.DownloadSelectedTemplateFolderHandler.tooltip = Handler zum Herunterladen des ausgewählten Vorlagenordners.
 com.top_logic.layout.scripting.template.gui.templates.OpenOnlyIfSimpleTemplate = Nur öffnen, wenn einfache Vorlage
-com.top_logic.layout.scripting.template.gui.templates.OpenOnlyIfSimpleTemplate.tooltip = <i>Befehlshandler</i>, der den <i>Vorlagenparameter-Komponentendialog</i> anzeigt.
+com.top_logic.layout.scripting.template.gui.templates.OpenOnlyIfSimpleTemplate.tooltip = <i>Befehl</i> zur Anzeige des Dialogs für <i>die Komponenten der Vorlagenparameter</i>.
 com.top_logic.layout.scripting.template.gui.templates.TemplateApplyCommand = Befehl "Vorlage anwenden
-com.top_logic.layout.scripting.template.gui.templates.TemplateApplyCommand.tooltip = <i>Befehlshandler</i> zum Speichern einer bearbeiteten Vorlage.
+com.top_logic.layout.scripting.template.gui.templates.TemplateApplyCommand.tooltip = <i>Befehl</i> zum Speichern einer bearbeiteten Vorlage.
 com.top_logic.layout.scripting.template.gui.templates.TemplateCreateBuilder = Schablone erstellen Builder
 com.top_logic.layout.scripting.template.gui.templates.TemplateCreateBuilder.tooltip = <i>Komponente</i> zur Erstellung neuer Vorlagen.
 com.top_logic.layout.scripting.template.gui.templates.TemplateEditBuilder = Schablonen-Editor
@@ -228,11 +228,11 @@ com.top_logic.layout.scripting.template.gui.templates.TemplateEditModel.paramete
 com.top_logic.layout.scripting.template.gui.templates.TemplateEditModel.parameters.tooltip = Die Parameter der Vorlage.
 com.top_logic.layout.scripting.template.gui.templates.TemplateEditModel.tooltip = Deklarationsformular zur Bearbeitung einer Vorlage.
 com.top_logic.layout.scripting.template.gui.templates.TemplateInstantiationCommand = Befehl zur Instanziierung von Vorlagen
-com.top_logic.layout.scripting.template.gui.templates.TemplateInstantiationCommand.tooltip = <i>Befehlshandler</i>, der einen Aufruf einer ausgewählten Vorlage erstellt.
+com.top_logic.layout.scripting.template.gui.templates.TemplateInstantiationCommand.tooltip = <i>Befehl</i>, der einen Aufruf einer ausgewählten Vorlage erzeugt.
 com.top_logic.layout.scripting.template.gui.templates.TemplateParameterComponent = Komponente des Vorlagenparameters
 com.top_logic.layout.scripting.template.gui.templates.TemplateParameterComponent.tooltip = <i>Formular-Komponente</i>, die alle Parameter einer Vorlage anzeigt und die Erstellung von Vorlagen-Argumentwerten ermöglicht.
 com.top_logic.layout.scripting.template.gui.templates.TemplateSaveCommand = Befehl zum Speichern einer Vorlage
-com.top_logic.layout.scripting.template.gui.templates.TemplateSaveCommand.tooltip = <i>Befehlshandler</i> zum Speichern einer bearbeiteten Vorlage.
+com.top_logic.layout.scripting.template.gui.templates.TemplateSaveCommand.tooltip = <i>Befehl</i> zum Speichern einer bearbeiteten Vorlage.
 com.top_logic.layout.scripting.template.gui.templates.TemplateTreeBuilder = Vorlagenbaum-Ersteller
 com.top_logic.layout.scripting.template.gui.templates.TemplateTreeBuilder.Config.template-path = Schablonen-Pfad
 com.top_logic.layout.scripting.template.gui.templates.TemplateTreeBuilder.Config.template-path.tooltip = Der <i>Datei-Manager-Pfad</i> des Stammverzeichnisses der anzuzeigenden Vorlagen.
