--- a/com.top_logic.layout.scripting.template/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.layout.scripting.template/src/main/java/META-INF/messages_en.properties
@@ -133,7 +133,7 @@ com.top_logic.layout.scripting.template.fuzzy.FormFuzzyInput$Op.tooltip = Defaul
 com.top_logic.layout.scripting.template.fuzzy.FormFuzzyInput.value = Value
 com.top_logic.layout.scripting.template.fuzzy.FormFuzzyInput.value.tooltip = Formatted value.
 com.top_logic.layout.scripting.template.gui.ActionReplayCommand = Action replay command
-com.top_logic.layout.scripting.template.gui.ActionReplayCommand.tooltip = Common base class for <i>command handlers</i> controlling script execution.
+com.top_logic.layout.scripting.template.gui.ActionReplayCommand.tooltip = Common base class for <i>commands</i> controlling script execution.
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction = Apply application action
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction$Mode = Mode
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction$Mode.tooltip = The script execution mode.
@@ -147,16 +147,16 @@ com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.Mode.STEP_OUT
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.Mode.STEP_OUT.tooltip = Execute until the end of the current group.
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.Mode.STEP_OVER = Step over
 com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.Mode.STEP_OVER.tooltip = Execute the whole selected group including all descending actions.
-com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.tooltip = <i>Command handler</i> that executes the selected action.
+com.top_logic.layout.scripting.template.gui.ApplyApplicationAction.tooltip = <i>Command</i> that executes the selected action.
 com.top_logic.layout.scripting.template.gui.SaveScriptCommand = Save script command
-com.top_logic.layout.scripting.template.gui.SaveScriptCommand.tooltip = A <i>command handler</i> that saves the <i>persistable script container</i> that is the selection of its <i>selectable</i> component.
+com.top_logic.layout.scripting.template.gui.SaveScriptCommand.tooltip = A <i>command</i> that saves the <i>persistable script container</i> that is the selection of its <i>selectable</i> component.
 com.top_logic.layout.scripting.template.gui.ScriptRecorderComponent = Script recorder component
 com.top_logic.layout.scripting.template.gui.ScriptRecorderComponent.Config.xml-display = XML display
 com.top_logic.layout.scripting.template.gui.ScriptRecorderComponent.Config.xml-display.tooltip = <i>XML pretty printer</i> configuration for displaying actions as XML.
 com.top_logic.layout.scripting.template.gui.ScriptRecorderComponent.tooltip = Displays an <i>application action</i> as XML. If the user edits the action, the changes are parsed and the new <i>application action</i> is displayed.
 com.top_logic.layout.scripting.template.gui.ScriptRecorderTree = Script recorder tree
 com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Delete = Delete
-com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Delete.tooltip = <i>Command handler</i> deleting the selected action.
+com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Delete.tooltip = <i>Command</i> deleting the selected action.
 com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Group = Group
 com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Paste = Paste
 com.top_logic.layout.scripting.template.gui.ScriptRecorderTree$Start = Start
@@ -175,15 +175,15 @@ com.top_logic.layout.scripting.template.gui.ScriptUploadComponent.tooltip = A <i
 com.top_logic.layout.scripting.template.gui.ScriptingRecorderDropTarget = Scripting recorder drop target
 com.top_logic.layout.scripting.template.gui.ScriptingRecorderDropTarget.tooltip = Drop handling for the <i>script recorder tree</i>.
 com.top_logic.layout.scripting.template.gui.StartBackgroundReplayCommand = Start background replay command
-com.top_logic.layout.scripting.template.gui.StartBackgroundReplayCommand.tooltip = <i>Command handler</i> stating a script execution in a new session.
+com.top_logic.layout.scripting.template.gui.StartBackgroundReplayCommand.tooltip = <i>Command</i> stating a script execution in a new session.
 com.top_logic.layout.scripting.template.gui.StopActionReplay = Stop action replay
-com.top_logic.layout.scripting.template.gui.StopActionReplay.tooltip = <i>Command handler</i> stopping a currently running script.
+com.top_logic.layout.scripting.template.gui.StopActionReplay.tooltip = <i>Command</i> stopping a currently running script.
 com.top_logic.layout.scripting.template.gui.StoreCurrentRevisionCommand = Store current revision command
 com.top_logic.layout.scripting.template.gui.StoreCurrentRevisionCommand.tooltip = <i>Command handler</i> that stores the last revision into a global variable and creates an action for it.
 com.top_logic.layout.scripting.template.gui.SwitchRecordAllCommands = Switch record all commands
-com.top_logic.layout.scripting.template.gui.SwitchRecordAllCommands.tooltip = <i>Command handler</i> allowing to switch the property whether all commands are recorded in the session.
+com.top_logic.layout.scripting.template.gui.SwitchRecordAllCommands.tooltip = <i>Command</i> allowing to switch the property whether all commands are recorded in the session.
 com.top_logic.layout.scripting.template.gui.SwitchRecordTechnicalCommands = Switch record technical commands
-com.top_logic.layout.scripting.template.gui.SwitchRecordTechnicalCommands.tooltip = <i>Command handler</i> allowing to switch the property whether technical commands are recorded in the current session.
+com.top_logic.layout.scripting.template.gui.SwitchRecordTechnicalCommands.tooltip = <i>Command</i> allowing to switch the property whether technical commands are recorded in the current session.
 com.top_logic.layout.scripting.template.gui.saveas.SaveScriptAsCommand = Save script as command
 com.top_logic.layout.scripting.template.gui.saveas.SaveScriptAsCommand.tooltip = Saves an <i>application action</i> into a <i>file</i>.
 com.top_logic.layout.scripting.template.gui.saveas.SaveScriptAsFormBuilder = Save script as form builder
@@ -199,7 +199,7 @@ com.top_logic.layout.scripting.template.gui.templates.AbstractTemplateFormBuilde
 com.top_logic.layout.scripting.template.gui.templates.AbstractTemplateFormBuilder.Config.xml-storage.tooltip = <i>XML pretty printer</i> configuration for saving the template.
 com.top_logic.layout.scripting.template.gui.templates.AbstractTemplateFormBuilder.tooltip = <i>Component</i> allowing to edit templates.
 com.top_logic.layout.scripting.template.gui.templates.DeleteTemplateCommand = Delete template command
-com.top_logic.layout.scripting.template.gui.templates.DeleteTemplateCommand.tooltip = <i>Command handler</i> for deleting a template resource.
+com.top_logic.layout.scripting.template.gui.templates.DeleteTemplateCommand.tooltip = <i>Command</i> for deleting a template resource.
 com.top_logic.layout.scripting.template.gui.templates.DownloadAllScriptRecorderTemplatesHandler = Download all script recorder templates handler
 com.top_logic.layout.scripting.template.gui.templates.DownloadAllScriptRecorderTemplatesHandler.tooltip = Handler to download all ScriptRecorder templates.
 com.top_logic.layout.scripting.template.gui.templates.DownloadScriptRecorderTemplateFoldersHandler = Download script recorder template folders handler
@@ -209,9 +209,9 @@ com.top_logic.layout.scripting.template.gui.templates.DownloadScriptRecorderTemp
 com.top_logic.layout.scripting.template.gui.templates.DownloadSelectedTemplateFolderHandler = Download selected template folder handler
 com.top_logic.layout.scripting.template.gui.templates.DownloadSelectedTemplateFolderHandler.tooltip = Handler to download the selected template folder.
 com.top_logic.layout.scripting.template.gui.templates.OpenOnlyIfSimpleTemplate = Open only if simple template
-com.top_logic.layout.scripting.template.gui.templates.OpenOnlyIfSimpleTemplate.tooltip = <i>Command handler</i> displaying the <i>template parameter component</i> dialog.
+com.top_logic.layout.scripting.template.gui.templates.OpenOnlyIfSimpleTemplate.tooltip = <i>Command</i> displaying the <i>template parameter component</i> dialog.
 com.top_logic.layout.scripting.template.gui.templates.TemplateApplyCommand = Template apply command
-com.top_logic.layout.scripting.template.gui.templates.TemplateApplyCommand.tooltip = <i>Command handler</i> saving an edited template.
+com.top_logic.layout.scripting.template.gui.templates.TemplateApplyCommand.tooltip = <i>Command</i> saving an edited template.
 com.top_logic.layout.scripting.template.gui.templates.TemplateCreateBuilder = Template create builder
 com.top_logic.layout.scripting.template.gui.templates.TemplateCreateBuilder.tooltip = <i>Component</i> for creating new templates.
 com.top_logic.layout.scripting.template.gui.templates.TemplateEditBuilder = Template edit builder
@@ -228,11 +228,11 @@ com.top_logic.layout.scripting.template.gui.templates.TemplateEditModel.paramete
 com.top_logic.layout.scripting.template.gui.templates.TemplateEditModel.parameters.tooltip = The parameters of the template.
 com.top_logic.layout.scripting.template.gui.templates.TemplateEditModel.tooltip = Declarative form for editing a template.
 com.top_logic.layout.scripting.template.gui.templates.TemplateInstantiationCommand = Template instantiation command
-com.top_logic.layout.scripting.template.gui.templates.TemplateInstantiationCommand.tooltip = <i>Command handler</i> that creates an invocation of a selected template.
+com.top_logic.layout.scripting.template.gui.templates.TemplateInstantiationCommand.tooltip = <i>Command</i> that creates an invocation of a selected template.
 com.top_logic.layout.scripting.template.gui.templates.TemplateParameterComponent = Template parameter component
 com.top_logic.layout.scripting.template.gui.templates.TemplateParameterComponent.tooltip = <i>Form component</i> that displays all parameters of a template and allows to create template argument values.
 com.top_logic.layout.scripting.template.gui.templates.TemplateSaveCommand = Template save command
-com.top_logic.layout.scripting.template.gui.templates.TemplateSaveCommand.tooltip = <i>Command handler</i> for saving an edited template.
+com.top_logic.layout.scripting.template.gui.templates.TemplateSaveCommand.tooltip = <i>Command</i> for saving an edited template.
 com.top_logic.layout.scripting.template.gui.templates.TemplateTreeBuilder = Template tree builder
 com.top_logic.layout.scripting.template.gui.templates.TemplateTreeBuilder.Config.template-path = Template path
 com.top_logic.layout.scripting.template.gui.templates.TemplateTreeBuilder.Config.template-path.tooltip = The <i>file manager</i> path of the root directory of templates to display.
