--- a/com.top_logic.layout.themeedit/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.layout.themeedit/src/main/java/META-INF/messages_de.properties
@@ -22,7 +22,7 @@ com.top_logic.layout.themeedit.browser.providers.CreateThemeVariableHandler.tool
 com.top_logic.layout.themeedit.browser.providers.DeleteThemeVariableHandler = Themenvariablen-Handler löschen
 com.top_logic.layout.themeedit.browser.providers.DeleteThemeVariableHandler.tooltip = Handler zum Löschen einer Themenvariablen.
 com.top_logic.layout.themeedit.browser.providers.FastThemeReload = Schnelles Nachladen des Themas
-com.top_logic.layout.themeedit.browser.providers.FastThemeReload.tooltip = <i>Befehlshandler</i> zum Nachladen der <i>Themenfabrik</i> ohne Abhängigkeiten.
+com.top_logic.layout.themeedit.browser.providers.FastThemeReload.tooltip = <i>Befehl</i> zum Neuladen der <i>Theme-Fabrik</i> ohne Abhängigkeiten.
 com.top_logic.layout.themeedit.browser.providers.SettingForm = Formular einstellen
 com.top_logic.layout.themeedit.browser.providers.SettingForm.documentation = Dokumentation
 com.top_logic.layout.themeedit.browser.providers.SettingForm.documentation.tooltip = Dokumentation für die bearbeitete Variable.
@@ -32,9 +32,9 @@ com.top_logic.layout.themeedit.browser.providers.SettingForm.tooltip = Formulara
 com.top_logic.layout.themeedit.browser.providers.ShowInheritedThemeVariablesHandler = Vererbte Themenvariablen-Handler anzeigen
 com.top_logic.layout.themeedit.browser.providers.ShowInheritedThemeVariablesHandler.tooltip = Geerbte Themenvariablen anzeigen.
 com.top_logic.layout.themeedit.browser.providers.StyleSheetApplyHandler = Stylesheet-Anwendungs-Handler
-com.top_logic.layout.themeedit.browser.providers.StyleSheetApplyHandler.tooltip = <i>Befehlshandler</i>, der ein Stylesheet zurück auf die Festplatte speichert.
+com.top_logic.layout.themeedit.browser.providers.StyleSheetApplyHandler.tooltip = <i>Befehl</i> zum Speichern einer Stilvorlage auf der Festplatte.
 com.top_logic.layout.themeedit.browser.providers.UpdateThemeVariableHandler = Themen-Variablen-Handler aktualisieren
-com.top_logic.layout.themeedit.browser.providers.UpdateThemeVariableHandler.tooltip = <i>Befehlshandler</i> zum Aktualisieren einer Themenvariablen.
+com.top_logic.layout.themeedit.browser.providers.UpdateThemeVariableHandler.tooltip = <i>Befehl</i> zur Aktualisierung einer Theme-Variable.
 com.top_logic.layout.themeedit.browser.providers.resources.DeleteResourceFolderHandler = Ressourcenordner-Handler löschen
 com.top_logic.layout.themeedit.browser.providers.resources.DeleteResourceFolderHandler.tooltip = Handler zum Löschen eines Ressourcenordners.
 com.top_logic.layout.themeedit.browser.providers.resources.DeleteResourceHandler = Ressourcen-Handler löschen
