--- a/com.top_logic.layout.themeedit/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.layout.themeedit/src/main/java/META-INF/messages_en.properties
@@ -22,7 +22,7 @@ com.top_logic.layout.themeedit.browser.providers.CreateThemeVariableHandler.tool
 com.top_logic.layout.themeedit.browser.providers.DeleteThemeVariableHandler = Delete theme variable handler
 com.top_logic.layout.themeedit.browser.providers.DeleteThemeVariableHandler.tooltip = Handler to delete a theme variable.
 com.top_logic.layout.themeedit.browser.providers.FastThemeReload = Fast theme reload
-com.top_logic.layout.themeedit.browser.providers.FastThemeReload.tooltip = <i>Command handler</i> reloading the <i>theme factory</i> without dependencies.
+com.top_logic.layout.themeedit.browser.providers.FastThemeReload.tooltip = <i>Command</i> reloading the <i>theme factory</i> without dependencies.
 com.top_logic.layout.themeedit.browser.providers.SettingForm = Setting form
 com.top_logic.layout.themeedit.browser.providers.SettingForm.documentation = Documentation
 com.top_logic.layout.themeedit.browser.providers.SettingForm.documentation.tooltip = Documentation for the edited variable.
@@ -32,9 +32,9 @@ com.top_logic.layout.themeedit.browser.providers.SettingForm.tooltip = Form type
 com.top_logic.layout.themeedit.browser.providers.ShowInheritedThemeVariablesHandler = Show inherited theme variables handler
 com.top_logic.layout.themeedit.browser.providers.ShowInheritedThemeVariablesHandler.tooltip = Show inherited theme variables.
 com.top_logic.layout.themeedit.browser.providers.StyleSheetApplyHandler = Style sheet apply handler
-com.top_logic.layout.themeedit.browser.providers.StyleSheetApplyHandler.tooltip = <i>Command handler</i> storing a style sheet back to disk.
+com.top_logic.layout.themeedit.browser.providers.StyleSheetApplyHandler.tooltip = <i>Command</i> storing a style sheet back to disk.
 com.top_logic.layout.themeedit.browser.providers.UpdateThemeVariableHandler = Update theme variable handler
-com.top_logic.layout.themeedit.browser.providers.UpdateThemeVariableHandler.tooltip = <i>Command handler</i> to update a theme variable.
+com.top_logic.layout.themeedit.browser.providers.UpdateThemeVariableHandler.tooltip = <i>Command</i> to update a theme variable.
 com.top_logic.layout.themeedit.browser.providers.resources.DeleteResourceFolderHandler = Delete resource folder handler
 com.top_logic.layout.themeedit.browser.providers.resources.DeleteResourceFolderHandler.tooltip = Handler to delete a resource folder.
 com.top_logic.layout.themeedit.browser.providers.resources.DeleteResourceHandler = Delete resource handler
