--- a/com.top_logic.layout.wysiwyg/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.layout.wysiwyg/src/main/java/META-INF/messages_de.properties
@@ -1,15 +1,15 @@
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator = Modifikator für den Befehl "Open Link" einstellen
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator$CommandForTypeConfig = Befehl zur Typkonfiguration
-com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator$CommandForTypeConfig.tooltip = Eine Zuordnung von einem <i>Typ</i> zu dem <i>Befehlshandler</i>, der verwendet werden soll, um eine Instanz dieses <i>Typs</i> anzuzeigen.
+com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator$CommandForTypeConfig.tooltip = Eine Abbildung eines <i>Typs</i> auf den <i>Befehl</i>, der verwendet werden soll, um eine Instanz dieses <i>Typs</i> anzuzeigen.
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.CommandForTypeConfig.commandId = Befehls-ID
-com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.CommandForTypeConfig.commandId.tooltip = Die ID des <i>Befehlshandlers</i>.
+com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.CommandForTypeConfig.commandId.tooltip = Die ID des <i>Befehls</i>.
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.CommandForTypeConfig.type = Typ
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.CommandForTypeConfig.type.tooltip = Der qualifizierte Name des <i>Typs</i>.
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.Config.commandMappings = Befehlszuordnungen
-com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.Config.commandMappings.tooltip = Definiert eine Zuordnung von <i>Typen</i> zu den Ids des <i>Befehlshandlers</i>, der Instanzen dieses Typs anzeigen soll. <p> Die Typen werden mit "Instanz von" gegen die Instanzen abgeglichen, nicht mit Gleichheit. Das heißt, es können mehrere Einträge auf eine Instanz passen. Die Typen werden in der angegebenen Reihenfolge geprüft. Der erste übereinstimmende Typ gewinnt. </p>
+com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.Config.commandMappings.tooltip = Definiert eine Abbildung von <i>Typen</i> auf die ids des <i>Befehls</i>, der Instanzen des jeweiligen Typs anzeigen soll. <p> Die Typen werden mit "instance of" gegen die Instanzen abgeglichen, nicht mit Gleichheit. Das bedeutet, dass mehrere Einträge mit einer Instanz übereinstimmen können. Die Typen werden in der angegebenen Reihenfolge geprüft. Der erste übereinstimmende Typ gewinnt. </p>
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.Config.field = Feld
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.Config.field.tooltip = Der Name des Attributs, dessen <i>Formularfeld</i> geändert werden soll.
-com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.tooltip = Ein <i>Formularkontext-Modifikator</i> zum Ändern des <i>Befehlshandlers</i>, der zum Öffnen der Ansicht eines WYSIWYG-Feldes verwendet wird.
+com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.tooltip = Ein <i>Formularkontext-Modifikator</i>, mit dem Sie ändern können, welcher <i>Befehl</i> zum Öffnen der Ansicht eines WYSIWYG-Feldes verwendet wird.
 com.top_logic.layout.wysiwyg.ui.StructuredTextConfigService = HTML-Konfigurator
 com.top_logic.layout.wysiwyg.ui.StructuredTextConfigService$EditorConfigFeature = Editor-Konfigurationsfunktion
 com.top_logic.layout.wysiwyg.ui.StructuredTextConfigService$EditorConfigFeature.tooltip = Konfigurationsoptionen für eine HTML-Editor-Funktion.
