--- a/com.top_logic.layout.wysiwyg/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.layout.wysiwyg/src/main/java/META-INF/messages_en.properties
@@ -1,15 +1,15 @@
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator = Set open link command modificator
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator$CommandForTypeConfig = Command for type configuration
-com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator$CommandForTypeConfig.tooltip = A mapping from a <i>type</i> to the <i>command handler</i> that should be used to display an instance of that <i>type</i>.
+com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator$CommandForTypeConfig.tooltip = A mapping from a <i>type</i> to the <i>command</i> that should be used to display an instance of that <i>type</i>.
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.CommandForTypeConfig.commandId = Command ID
-com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.CommandForTypeConfig.commandId.tooltip = The id of the <i>command handler</i>.
+com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.CommandForTypeConfig.commandId.tooltip = The id of the <i>command</i>.
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.CommandForTypeConfig.type = Type
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.CommandForTypeConfig.type.tooltip = The qualified name of the <i>type</i>.
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.Config.commandMappings = Command mappings
-com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.Config.commandMappings.tooltip = Defines a mapping from <i>types</i> to the ids of the <i>command handler</i> that should display instances of that type. <p> The types are matched with "instance of" against the instances, not with equality. That means, multiple entries can match against one instance. The types are checked in the given order. The first matching type wins. </p>
+com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.Config.commandMappings.tooltip = Defines a mapping from <i>types</i> to the ids of the <i>command</i> that should display instances of that type. <p> The types are matched with "instance of" against the instances, not with equality. That means, multiple entries can match against one instance. The types are checked in the given order. The first matching type wins. </p>
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.Config.field = Field
 com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.Config.field.tooltip = The name of the attribute, whose <i>form field</i> should be modified.
-com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.tooltip = A <i>form context modificator</i> for changing which <i>command handler</i> will be used for opening the view of a WYSIWYG field.
+com.top_logic.layout.wysiwyg.ui.SetOpenLinkCommandModificator.tooltip = A <i>form context modificator</i> for changing which <i>command</i> will be used for opening the view of a WYSIWYG field.
 com.top_logic.layout.wysiwyg.ui.StructuredTextConfigService = Structured text configuration service
 com.top_logic.layout.wysiwyg.ui.StructuredTextConfigService$EditorConfigFeature = Editor configuration feature
 com.top_logic.layout.wysiwyg.ui.StructuredTextConfigService$EditorConfigFeature.tooltip = Configuration options for an HTML editor feature.
