--- a/com.top_logic.reporting.flex/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.reporting.flex/src/main/java/META-INF/messages_de.properties
@@ -8,7 +8,7 @@ com.top_logic.reporting.flex.chart.component.AbstractChartComponent.Config.post-
 com.top_logic.reporting.flex.chart.component.AbstractChartComponent.tooltip = <i>Diagrammkomponente</i> zur Anzeige eines konfigurierten Diagramms. <p> Diese Komponente arbeitet mit einem <i>Diagrammmodell</i>, das normalerweise von einer <i>Diagrammkonfigurationskomponente</i> empfangen wird. </p>
 com.top_logic.reporting.flex.chart.component.ChartConfigComponent = Komponente zur Konfiguration von Diagrammen
 com.top_logic.reporting.flex.chart.component.ChartConfigComponent$ApplySettings = Einstellungen anwenden
-com.top_logic.reporting.flex.chart.component.ChartConfigComponent$ApplySettings.tooltip = <i>Befehlshandler</i>, der Einstellungen anwendet und das Diagramm aktualisiert.
+com.top_logic.reporting.flex.chart.component.ChartConfigComponent$ApplySettings.tooltip = <i>Befehl</i> zum Anwenden von Einstellungen und Aktualisieren des Diagramms.
 com.top_logic.reporting.flex.chart.component.ChartConfigComponent.Config.base-config = Basis-Konfiguration
 com.top_logic.reporting.flex.chart.component.ChartConfigComponent.Config.base-config-file = Basis-Konfigurationsdatei
 com.top_logic.reporting.flex.chart.component.ChartConfigComponent.Config.base-config-file.tooltip = Ressourcenname der XML-Datei, die eine <i>interaktive Diagrammerstellungskonfiguration</i> enthält. <p> Nur relevant, wenn keine <i>Inline-Base-Konfiguration</i> vorhanden ist. </p> <p> Wenn weder <i>eine Basiskonfigurationsdatei</i> noch eine <i>Basiskonfiguration</i> angegeben ist, kann ein Diagramm nur angezeigt werden, indem eine Diagrammkonfiguration per Programmcode festgelegt wird. </p>
@@ -731,7 +731,7 @@ com.top_logic.reporting.flex.search.SearchResultChartComponent = Komponente des 
 com.top_logic.reporting.flex.search.SearchResultChartComponent.tooltip = <i>Konfigurierte Diagrammkomponente</i> mit registriertem Detail-Handler, der mit der <i>Suchergebnismenge</i> arbeitet.
 com.top_logic.reporting.flex.search.SearchResultChartConfigComponent = Komponente zur Konfiguration von Suchergebnisdiagrammen
 com.top_logic.reporting.flex.search.SearchResultChartConfigComponent$SaveAs = Speichern unter
-com.top_logic.reporting.flex.search.SearchResultChartConfigComponent$SaveAs.tooltip = <i>Befehlshandler</i>, der den "Speichern unter..."-Dialog öffnet.
+com.top_logic.reporting.flex.search.SearchResultChartConfigComponent$SaveAs.tooltip = <i>Befehl</i> zum Öffnen des Dialogs "Speichern unter...".
 com.top_logic.reporting.flex.search.SearchResultChartConfigComponent.Config.query-selector = Abfrage-Selektor
 com.top_logic.reporting.flex.search.SearchResultChartConfigComponent.Config.query-selector.tooltip = Name der Abfrageauswahlkomponente.
 com.top_logic.reporting.flex.search.SearchResultStoredReportSelector = Suchergebnis gespeicherter Berichtsselektor
@@ -759,12 +759,12 @@ com.top_logic.reporting.flex.search.chart.SearchResultDataSource.tooltip = <i>Di
 com.top_logic.reporting.flex.search.chart.SearchResultInteractiveChartBuilder = Interaktiver Chart Builder für Suchergebnisse
 com.top_logic.reporting.flex.search.chart.SearchResultInteractiveChartBuilder.tooltip = <i>Interaktive Diagrammerstellungsklasse</i> für Suchergebnis-Berichte.
 com.top_logic.reporting.flex.search.handler.CreateReportCommand = Befehl Bericht erstellen
-com.top_logic.reporting.flex.search.handler.CreateReportCommand.tooltip = <i>Befehlhandler</i> zum Erstellen eines <i>Flex-Reports</i> der Format-Version 2.
+com.top_logic.reporting.flex.search.handler.CreateReportCommand.tooltip = <i>Befehl</i> zur Erstellung eines <i>Flex-Reports</i> der Format-Version 2.
 com.top_logic.reporting.flex.search.handler.DeleteReportCommand = Befehl Bericht löschen
-com.top_logic.reporting.flex.search.handler.DeleteReportCommand.tooltip = <i>Befehlshandler</i> zum Löschen des aktuell ausgewählten <i>Flex-Reports</i>
+com.top_logic.reporting.flex.search.handler.DeleteReportCommand.tooltip = <i>Befehl</i> zum Löschen des aktuell ausgewählten <i>Flexberichts</i>
 com.top_logic.reporting.flex.search.handler.DisplayDetailsCommand = Befehl Details anzeigen
 com.top_logic.reporting.flex.search.handler.DisplayDetailsCommand.tooltip = Dialog-Hanlder, der mit der <i>Ergebnismenge der Objektsuche</i> arbeitet, um Informationen über Typ und ausgewählte Spalten zu übergeben.
 com.top_logic.reporting.flex.search.handler.ResetReportCommand = Befehl "Bericht zurücksetzen
-com.top_logic.reporting.flex.search.handler.ResetReportCommand.tooltip = <i>Befehlshandler</i> zum Zurücksetzen auf den persistenten Zustand des aktuell ausgewählten <i>Flex-Reports</i>
+com.top_logic.reporting.flex.search.handler.ResetReportCommand.tooltip = <i>Befehl</i> zum Zurücksetzen auf den dauerhaften Zustand des aktuell ausgewählten <i>Flex-Reports</i>
 com.top_logic.reporting.flex.search.handler.SaveReportCommand = Befehl Bericht speichern
-com.top_logic.reporting.flex.search.handler.SaveReportCommand.tooltip = <i>Befehlshandler</i> zum Speichern der Änderungen an dem aktuell ausgewählten <i>Flex-Report</i>
+com.top_logic.reporting.flex.search.handler.SaveReportCommand.tooltip = <i>Befehl</i> zum Speichern der Änderungen am aktuell ausgewählten <i>Flex-Report</i>
