--- a/com.top_logic.reporting.flex/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.reporting.flex/src/main/java/META-INF/messages_en.properties
@@ -8,7 +8,7 @@ com.top_logic.reporting.flex.chart.component.AbstractChartComponent.Config.post-
 com.top_logic.reporting.flex.chart.component.AbstractChartComponent.tooltip = <i>Chart component</i> to display a configured chart. <p> This component operates on a <i>chart model</i> model that is typically received from a <i>chart configuration component</i>. </p>
 com.top_logic.reporting.flex.chart.component.ChartConfigComponent = Chart configuration component
 com.top_logic.reporting.flex.chart.component.ChartConfigComponent$ApplySettings = Apply settings
-com.top_logic.reporting.flex.chart.component.ChartConfigComponent$ApplySettings.tooltip = <i>Command handler</i> applying settings and updating the chart.
+com.top_logic.reporting.flex.chart.component.ChartConfigComponent$ApplySettings.tooltip = <i>Command</i> applying settings and updating the chart.
 com.top_logic.reporting.flex.chart.component.ChartConfigComponent.Config.base-config = Base configuration
 com.top_logic.reporting.flex.chart.component.ChartConfigComponent.Config.base-config-file = Base configuration file
 com.top_logic.reporting.flex.chart.component.ChartConfigComponent.Config.base-config-file.tooltip = Resource name of the XML file containing an <i>interactive chart builder</i> configuration. <p> Only relevant if no inline <i>Base configuration</i> exists. </p> <p> If neither <i>Base configuration file</i> nor <i>Base configuration</i> is given, a chart can only displayed by setting a chart configuration by program code. </p>
@@ -731,7 +731,7 @@ com.top_logic.reporting.flex.search.SearchResultChartComponent = Search result c
 com.top_logic.reporting.flex.search.SearchResultChartComponent.tooltip = <i>Configured chart component</i> with registered detail-handler that works with <i>search result set</i>.
 com.top_logic.reporting.flex.search.SearchResultChartConfigComponent = Search result chart configuration component
 com.top_logic.reporting.flex.search.SearchResultChartConfigComponent$SaveAs = Save as
-com.top_logic.reporting.flex.search.SearchResultChartConfigComponent$SaveAs.tooltip = <i>Command handler</i> opening the "Save as..." dialog.
+com.top_logic.reporting.flex.search.SearchResultChartConfigComponent$SaveAs.tooltip = <i>Command</i> opening the "Save as..." dialog.
 com.top_logic.reporting.flex.search.SearchResultChartConfigComponent.Config.query-selector = Query selector
 com.top_logic.reporting.flex.search.SearchResultChartConfigComponent.Config.query-selector.tooltip = Name of the query selector component.
 com.top_logic.reporting.flex.search.SearchResultStoredReportSelector = Search result stored report selector
@@ -759,12 +759,12 @@ com.top_logic.reporting.flex.search.chart.SearchResultDataSource.tooltip = <i>Ch
 com.top_logic.reporting.flex.search.chart.SearchResultInteractiveChartBuilder = Search result interactive chart builder
 com.top_logic.reporting.flex.search.chart.SearchResultInteractiveChartBuilder.tooltip = <i>Interactive chart builder</i> class for search-result-reports.
 com.top_logic.reporting.flex.search.handler.CreateReportCommand = Create report command
-com.top_logic.reporting.flex.search.handler.CreateReportCommand.tooltip = <i>Command handler</i> to create a <i>flex report</i> of format-version 2.
+com.top_logic.reporting.flex.search.handler.CreateReportCommand.tooltip = <i>Command</i> to create a <i>flex report</i> of format-version 2.
 com.top_logic.reporting.flex.search.handler.DeleteReportCommand = Delete report command
-com.top_logic.reporting.flex.search.handler.DeleteReportCommand.tooltip = <i>Command handler</i> to delete the currently selected <i>flex report</i>
+com.top_logic.reporting.flex.search.handler.DeleteReportCommand.tooltip = <i>Command</i> to delete the currently selected <i>flex report</i>
 com.top_logic.reporting.flex.search.handler.DisplayDetailsCommand = Display details command
 com.top_logic.reporting.flex.search.handler.DisplayDetailsCommand.tooltip = Dialog-hanlder that works with <i>object search result set</i> to pass information about type and selected columns.
 com.top_logic.reporting.flex.search.handler.ResetReportCommand = Reset report command
-com.top_logic.reporting.flex.search.handler.ResetReportCommand.tooltip = <i>Command handler</i> to reset to the persistent state of the currently selected <i>flex report</i>
+com.top_logic.reporting.flex.search.handler.ResetReportCommand.tooltip = <i>Command</i> to reset to the persistent state of the currently selected <i>flex report</i>
 com.top_logic.reporting.flex.search.handler.SaveReportCommand = Save report command
-com.top_logic.reporting.flex.search.handler.SaveReportCommand.tooltip = <i>Command handler</i> to store the changes to the currently selected <i>flex report</i>
+com.top_logic.reporting.flex.search.handler.SaveReportCommand.tooltip = <i>Command</i> to store the changes to the currently selected <i>flex report</i>
