--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
@@ -146,7 +146,7 @@ com.top_logic.service.openapi.server.impl.ServiceMethodBuilderByExpression.toolt
 com.top_logic.service.openapi.server.layout.ExportOpenAPIConfiguration = Offene API-Konfiguration exportieren
 com.top_logic.service.openapi.server.layout.ExportOpenAPIConfiguration.Config.export-format = Exportformat
 com.top_logic.service.openapi.server.layout.ExportOpenAPIConfiguration.Config.export-format.tooltip = Das Format des Exports.
-com.top_logic.service.openapi.server.layout.ExportOpenAPIConfiguration.tooltip = <i>Befehlshandler</i>, der die konfigurierte Server-API im <i>OpenAPI-Format</i> exportiert.
+com.top_logic.service.openapi.server.layout.ExportOpenAPIConfiguration.tooltip = <i>Befehl</i> zum Exportieren der konfigurierten Server-API im <i>OpenAPI-Format</i>.
 com.top_logic.service.openapi.server.layout.ImportOpenAPIServer = Offenen API-Server importieren
 com.top_logic.service.openapi.server.layout.ImportOpenAPIServer.tooltip = <i>Importieren einer offenen API-Konfiguration</i>, die einen <i>OpenAPI-Server</i> aus einer importierten Konfiguration erstellt.
 com.top_logic.service.openapi.server.layout.OpenAPIExporter$ExportFormat = Exportformat
