--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
@@ -146,7 +146,7 @@ com.top_logic.service.openapi.server.impl.ServiceMethodBuilderByExpression.toolt
 com.top_logic.service.openapi.server.layout.ExportOpenAPIConfiguration = Export open API configuration
 com.top_logic.service.openapi.server.layout.ExportOpenAPIConfiguration.Config.export-format = Export format
 com.top_logic.service.openapi.server.layout.ExportOpenAPIConfiguration.Config.export-format.tooltip = The format of the export.
-com.top_logic.service.openapi.server.layout.ExportOpenAPIConfiguration.tooltip = <i>Command handler</i> exporting the configured server API in <i>OpenAPI</i> format.
+com.top_logic.service.openapi.server.layout.ExportOpenAPIConfiguration.tooltip = <i>Command</i> exporting the configured server API in <i>OpenAPI</i> format.
 com.top_logic.service.openapi.server.layout.ImportOpenAPIServer = Import open API server
 com.top_logic.service.openapi.server.layout.ImportOpenAPIServer.tooltip = <i>Import open API configuration</i> that creates an <i>OpenAPI</i> server from an imported configuration.
 com.top_logic.service.openapi.server.layout.OpenAPIExporter$ExportFormat = Export format
