--- a/com.top_logic.doc.app/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.doc.app/src/main/java/META-INF/messages_de.properties
@@ -3,7 +3,7 @@ com.top_logic.doc.app.Icons.IMPORT_ERROR_ICON = Symbol zur Anzeige eines Hinweis
 com.top_logic.doc.app.export.ExportChapterCommand = Befehl Kapitel exportieren
 com.top_logic.doc.app.export.ExportChapterCommand.Config.draft = Entwurf
 com.top_logic.doc.app.export.ExportChapterCommand.Config.draft.tooltip = Ob mit "Entwurf"-Hintergrund exportiert werden soll.
-com.top_logic.doc.app.export.ExportChapterCommand.tooltip = <i>Befehlshandler</i>, der einen PDF-Export des ausgewählten Kapitels der Dokumentation vorbereitet.
+com.top_logic.doc.app.export.ExportChapterCommand.tooltip = <i>Befehl</i> zur Vorbereitung eines PDF-Exports des ausgewählten Kapitels der Dokumentation.
 com.top_logic.doc.app.importDoc.ImportSettings = Einstellungen importieren
 com.top_logic.doc.app.importDoc.ImportSettings.extract-titles = Auszug Titel
 com.top_logic.doc.app.importDoc.ImportSettings.extract-titles.tooltip = Ob Seitentitel aus dem Inhalt extrahiert werden sollen.
@@ -11,4 +11,4 @@ com.top_logic.doc.app.importDoc.ImportSettings.import-data = Daten importieren
 com.top_logic.doc.app.importDoc.ImportSettings.import-data.tooltip = Die zu importierenden Daten.
 com.top_logic.doc.app.importDoc.ImportSettings.tooltip = Beschreibung des Dialogmodells für den HTML-Import.
 com.top_logic.doc.app.importDoc.OpenImportDocumentationDialogCommand = Dialogbefehl Importdokumentation öffnen
-com.top_logic.doc.app.importDoc.OpenImportDocumentationDialogCommand.tooltip = <i>Befehlshandler</i> zum Öffnen eines Importdialogs.
+com.top_logic.doc.app.importDoc.OpenImportDocumentationDialogCommand.tooltip = <i>Befehl</i> zum Öffnen eines Importdialogs.
