--- a/com.top_logic.doc.app/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.doc.app/src/main/java/META-INF/messages_en.properties
@@ -3,7 +3,7 @@ com.top_logic.doc.app.Icons.IMPORT_ERROR_ICON = Icon to show a hint of import er
 com.top_logic.doc.app.export.ExportChapterCommand = Export chapter command
 com.top_logic.doc.app.export.ExportChapterCommand.Config.draft = Draft
 com.top_logic.doc.app.export.ExportChapterCommand.Config.draft.tooltip = Whether to export with "draft" background.
-com.top_logic.doc.app.export.ExportChapterCommand.tooltip = <i>Command handler</i> preparing an PDF export of the selected chapter of the documentation.
+com.top_logic.doc.app.export.ExportChapterCommand.tooltip = <i>Command</i> preparing an PDF export of the selected chapter of the documentation.
 com.top_logic.doc.app.importDoc.ImportSettings = Import settings
 com.top_logic.doc.app.importDoc.ImportSettings.extract-titles = Extract titles
 com.top_logic.doc.app.importDoc.ImportSettings.extract-titles.tooltip = Whether to extract page titles from from contents.
@@ -11,4 +11,4 @@ com.top_logic.doc.app.importDoc.ImportSettings.import-data = Import data
 com.top_logic.doc.app.importDoc.ImportSettings.import-data.tooltip = The data to import.
 com.top_logic.doc.app.importDoc.ImportSettings.tooltip = Description of the HTML import dialog model.
 com.top_logic.doc.app.importDoc.OpenImportDocumentationDialogCommand = Open import documentation dialog command
-com.top_logic.doc.app.importDoc.OpenImportDocumentationDialogCommand.tooltip = <i>Command handler</i> opening an import dialog.
+com.top_logic.doc.app.importDoc.OpenImportDocumentationDialogCommand.tooltip = <i>Command</i> opening an import dialog.
