--- a/com.top_logic.doc/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.doc/src/main/java/META-INF/messages_de.properties
@@ -10,13 +10,13 @@ com.top_logic.doc.TranslateCommandHandler.Config.recursive = Rekursiv
 com.top_logic.doc.TranslateCommandHandler.Config.recursive.tooltip = Ob nicht nur die aktuelle Seite, sondern der gesamte Teilbaum übersetzt werden muss.
 com.top_logic.doc.TranslateCommandHandler.tooltip = Ein <i>Befehlshandler</i>, der die in der <i>Dokumentationsbaumkomponente</i> ausgewählte <i>Seite</i> übersetzt.
 com.top_logic.doc.command.AbstractExportDocumentationCommand = Befehl Dokumentation exportieren
-com.top_logic.doc.command.AbstractExportDocumentationCommand.tooltip = Ein <i>Befehlshandler</i>, der die Dokumentation in den Arbeitsbereich exportiert.
+com.top_logic.doc.command.AbstractExportDocumentationCommand.tooltip = Ein <i>Befehl</i>, der die Dokumentation in den Arbeitsbereich exportiert.
 com.top_logic.doc.command.AbstractImportExportDocumentationCommand = Befehl Import-Export-Dokumentation
-com.top_logic.doc.command.AbstractImportExportDocumentationCommand.tooltip = Abstrakter <i>Befehlshandler</i> für den Import und Export von Dokumentation zwischen dem Arbeitsbereich und einer laufenden Applikation.
+com.top_logic.doc.command.AbstractImportExportDocumentationCommand.tooltip = Abstrakter <i>Befehl</i> für den Import und Export von Dokumentation zwischen dem Arbeitsbereich und einer laufenden Anwendung.
 com.top_logic.doc.command.ExportDocumentationAsZipCommand = Befehl Dokumentation als zip exportieren
 com.top_logic.doc.command.ExportDocumentationAsZipCommand.tooltip = Liefert den ausgewählten Teil der Dokumentation als ZIP-Download.
 com.top_logic.doc.command.ExportDocumentationIntoWorkspaceCommand = Befehl Dokumentation in Arbeitsbereich exportieren
-com.top_logic.doc.command.ExportDocumentationIntoWorkspaceCommand.tooltip = <i>Befehlshandler</i>, der die Dokumentation in den Arbeitsbereich exportiert.
+com.top_logic.doc.command.ExportDocumentationIntoWorkspaceCommand.tooltip = <i>Befehl</i> zum Exportieren der Dokumentation in den Arbeitsbereich.
 com.top_logic.doc.command.GenerateDocumentationCommand = Dokumentationsbefehl erzeugen
 com.top_logic.doc.command.GenerateDocumentationCommand.Config.generator = Generator
 com.top_logic.doc.command.GenerateDocumentationCommand.Config.generator.tooltip = Der <i>Dokumentationsgenerator</i>, der die eigentliche Generierung vornimmt.
@@ -28,7 +28,7 @@ com.top_logic.doc.command.ImportDocumentationAsZipCommand.ImportSettings.import-
 com.top_logic.doc.command.ImportDocumentationAsZipCommand.ImportSettings.import-data.tooltip = Die zu importierenden Daten.
 com.top_logic.doc.command.ImportDocumentationAsZipCommand.tooltip = Befehl zum Importieren eines Zip-Exports der Dokumentation.
 com.top_logic.doc.command.ImportDocumentationFromWorkspaceCommand = Befehl Dokumentation aus Arbeitsbereich importieren
-com.top_logic.doc.command.ImportDocumentationFromWorkspaceCommand.tooltip = Ein <i>Befehlshandler</i>, der die Dokumentation aus dem Arbeitsbereich importiert.
+com.top_logic.doc.command.ImportDocumentationFromWorkspaceCommand.tooltip = Ein <i>Befehl</i>, der die Dokumentation aus dem Arbeitsbereich importiert.
 com.top_logic.doc.command.OpenDocumentationCommand = Befehl zum Öffnen der Dokumentation
 com.top_logic.doc.command.OpenDocumentationCommand.tooltip = Öffnet das Dokumentationsfenster.
 com.top_logic.doc.command.validation.PageValidators = Seitenvalidierer
