--- a/com.top_logic.service.openapi.client/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.client/src/main/java/META-INF/messages_de.properties
@@ -32,7 +32,7 @@ com.top_logic.service.openapi.client.authentication.oauth.user.ClientCredentials
 com.top_logic.service.openapi.client.authentication.oauth.user.WithUserAuthentication = Mit Benutzerauthentifizierung
 com.top_logic.service.openapi.client.authentication.oauth.user.WithUserAuthentication.tooltip = Verwendet zur Autorisierung das persönliche Token des aktuell über OIDC angemeldeten Benutzers.
 com.top_logic.service.openapi.client.layout.ImportOpenAPIClient = Offenen API-Client importieren
-com.top_logic.service.openapi.client.layout.ImportOpenAPIClient.tooltip = <i>Befehlshandler</i>, der einen <i>OpenAPI-Client</i> importiert.
+com.top_logic.service.openapi.client.layout.ImportOpenAPIClient.tooltip = <i>Befehl</i> zum Importieren eines <i>OpenAPI-Clients</i>.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry = TL-Script-Funktionen für externe APIs
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.authentications.tooltip = <i>Client-Authentifizierungen</i>, die zur Authentifizierung von Anfragen in <i>Methodendefinitionen</i> verwendet werden können.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.method-definitions = Funktionsdefinitionen
