--- a/com.top_logic.service.openapi.client/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.client/src/main/java/META-INF/messages_en.properties
@@ -32,7 +32,7 @@ com.top_logic.service.openapi.client.authentication.oauth.user.ClientCredentials
 com.top_logic.service.openapi.client.authentication.oauth.user.WithUserAuthentication = With user authentication
 com.top_logic.service.openapi.client.authentication.oauth.user.WithUserAuthentication.tooltip = Uses the personal access token of the user currently logged in via OIDC for authorization.
 com.top_logic.service.openapi.client.layout.ImportOpenAPIClient = Import open API client
-com.top_logic.service.openapi.client.layout.ImportOpenAPIClient.tooltip = <i>Command handler</i> importing an <i>OpenAPI</i> client.
+com.top_logic.service.openapi.client.layout.ImportOpenAPIClient.tooltip = <i>Command</i> importing an <i>OpenAPI</i> client.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry = TL-Script functions for external APIs
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.authentications.tooltip = <i>Client authentications</i> that can be used to authenticate requests in <i>Method definitions</i>.
 com.top_logic.service.openapi.client.registry.ServiceMethodRegistry.Config.method-definitions = Method definitions
