--- a/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_de.properties
@@ -329,7 +329,7 @@ com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration$ImportCon
 com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration$ImportConfiguration.tooltip = Konfiguration des <i>OpenAPI-Dokuments</i>, das die Serverkonfiguration enthält, für die Zugriffsmethoden erstellt werden sollen.
 com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration.ImportConfiguration.open-api-configuration = Api-Konfiguration öffnen
 com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration.ImportConfiguration.open-api-configuration.tooltip = <i>Binäre Daten</i>, die die JSON-Konfiguration des <i>OpenAPI-Servers</i> enthalten, für den Zugriffsmethoden erstellt werden sollen.
-com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration.tooltip = <i>Befehlshandler</i>, der ein <i>OpenAPI-Spezifikationsdokument</i> importiert.
+com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration.tooltip = <i>Befehl</i> zum Importieren eines <i>OpenAPI-Spezifikationsdokuments</i>.
 com.top_logic.service.openapi.common.layout.MultiPartBodyTransferType = Übertragungsart für mehrteilige Körper
 com.top_logic.service.openapi.common.layout.MultiPartBodyTransferType.FORM_DATA = multipart/form-data
 com.top_logic.service.openapi.common.layout.MultiPartBodyTransferType.FORM_DATA.tooltip = Die Werte für den Body werden als separate Teile im Request Body übertragen.
