--- a/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.common/src/main/java/META-INF/messages_en.properties
@@ -329,7 +329,7 @@ com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration$ImportCon
 com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration$ImportConfiguration.tooltip = Configuration of the <i>OpenAPI</i> document containing the server configuration to create access methods for.
 com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration.ImportConfiguration.open-api-configuration = Open api configuration
 com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration.ImportConfiguration.open-api-configuration.tooltip = <i>Binary data</i> containing the JSON configuration of the <i>OpenAPI</i> server to create access methods for.
-com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration.tooltip = <i>Command handler</i> importing an <i>OpenAPI</i> specification document.
+com.top_logic.service.openapi.common.layout.ImportOpenAPIConfiguration.tooltip = <i>Command</i> importing an <i>OpenAPI</i> specification document.
 com.top_logic.service.openapi.common.layout.MultiPartBodyTransferType = Transfer type for multi part body
 com.top_logic.service.openapi.common.layout.MultiPartBodyTransferType.FORM_DATA = multipart/form-data
 com.top_logic.service.openapi.common.layout.MultiPartBodyTransferType.FORM_DATA.tooltip = The values for the body are transfered as separate parts in the request body.
